--- a/src/usr_26.tex
+++ b/src/usr_26.tex
@@ -10,10 +10,10 @@ In this chapter a number of useful ways to repeat a change will be explained.
 Visual mode is very handy for making a change in any sequence of lines.
 You can see the highlighted text, thus you can check if the correct lines are changed.
 But making the selection takes some typing.
-The "\texttt{gv}" command selects the same area again.
+The ``\texttt{gv}" command selects the same area again.
 This allows you to do another operation on the same text.
 
-Suppose you have some lines where you want to change "2001" to "2002" and "2000" to "2001":
+Suppose you have some lines where you want to change ``2001" to ``2002" and ``2000" to ``2001":
 
 \begin{Verbatim}[samepage=true]
     The financial results for 2001 are better 
@@ -23,15 +23,15 @@ Suppose you have some lines where you want to change "2001" to "2002" and "2000"
     income      45,403      66,234 
 \end{Verbatim}
 
-First change "2001" to "2002".  Select the lines in Visual mode, and use:
+First change ``2001" to ``2002".  Select the lines in Visual mode, and use:
 
 \begin{Verbatim}[samepage=true]
  :s/2001/2002/g
 \end{Verbatim}
 
-Now use "\texttt{gv}" to reselect the same text.
+Now use ``\texttt{gv}" to reselect the same text.
 It doesn't matter where the cursor is.
-Then use "\texttt{:s/2000/2001/g}" to make the second change.
+Then use ``\texttt{:s/2000/2001/g}" to make the second change.
 
 Obviously, you can repeat these changes several times.
 \subsection{Add and subtract}
@@ -56,8 +56,8 @@ The year will be increased by one:
     income      45,403      66,234 
 \end{Verbatim}
 
-Use "\texttt{n}" to find the next year, and press "\texttt{.}" to repeat the CTRL-A ("\texttt{.}" is a bit quicker to type).
-Repeat "\texttt{n}" and "\texttt{.}" for all years that appear.
+Use ``\texttt{n}" to find the next year, and press ``\texttt{.}" to repeat the CTRL-A ("\texttt{.}" is a bit quicker to type).
+Repeat ``\texttt{n}" and ``\texttt{.}" for all years that appear.
 
 Hint: set the \texttt{'hlsearch'} option to see the matches you are going to change, then you can look ahead and do it faster.
 
@@ -70,14 +70,14 @@ Suppose you have this list:
     3.  item six 
 \end{Verbatim}
 
-Move the cursor to "1." and type:
+Move the cursor to ``1." and type:
 
 \begin{Verbatim}[samepage=true]
  3 CTRL-A
 \end{Verbatim}
 
-The "1." will change to "4.".
-Again, you can use "\texttt{.}" to repeat this on the other numbers.
+The ``1." will change to ``4.".
+Again, you can use ``\texttt{.}" to repeat this on the other numbers.
 
 Another example:
 
@@ -93,7 +93,7 @@ Using CTRL-A on these numbers results in:
     010 foo bar 
 \end{Verbatim}
 
-7 plus one is 10?  What happened here is that Vim recognized "007" as an octal number, because there is a leading zero.
+7 plus one is 10?  What happened here is that Vim recognized ``007" as an octal number, because there is a leading zero.
 This notation is often used in C programs.
 If you do not want a number with leading zeros to be handled as octal, use this:
 
@@ -103,7 +103,7 @@ If you do not want a number with leading zeros to be handled as octal, use this:
 
 The CTRL-X command does subtraction in a similar way.
 \subsection{Making a change in many files}
-Suppose you have a variable called "\texttt{x\_cnt}" and you want to change it to "\texttt{x\_counter}".
+Suppose you have a variable called ``\texttt{x\_cnt}" and you want to change it to ``\texttt{x\_counter}".
 This variable is used in several of your C files.
 You need to change it in all files.
 This is how you do it.
@@ -121,27 +121,27 @@ Now you can perform a substitution command on all these files:
  :argdo %s/\<x_cnt\>/x_counter/ge | update
 \end{Verbatim}
 
-The "\texttt{:argdo}" command takes an argument that is another command.
+The ``\texttt{:argdo}" command takes an argument that is another command.
 That command will be executed on all files in the argument list.
 
-The "\texttt{\%s}" substitute command that follows works on all lines.
-It finds the word "\texttt{x\_cnt}" with "\texttt{\textbackslash<x\_cnt\textbackslash>}".
-The "\texttt{\textbackslash<}" and "\texttt{\textbackslash>}" are used to match the whole word only, and not "\texttt{px\_cnt}" or "\texttt{x\_cnt2}".
+The ``\texttt{\%s}" substitute command that follows works on all lines.
+It finds the word ``\texttt{x\_cnt}" with ``\texttt{\textbackslash<x\_cnt\textbackslash>}".
+The ``\texttt{\textbackslash<}" and ``\texttt{\textbackslash>}" are used to match the whole word only, and not ``\texttt{px\_cnt}" or ``\texttt{x\_cnt2}".
 
-The flags for the substitute command include "\texttt{g}" to replace all occurrences of "\texttt{x\_cnt}" in the same line.
-The "\texttt{e}" flag is used to avoid an error message when "\texttt{x\_cnt}" does not appear in the file.
-Otherwise "\texttt{:argdo}" would abort on the first file where "\texttt{x\_cnt}" was not found.
+The flags for the substitute command include ``\texttt{g}" to replace all occurrences of ``\texttt{x\_cnt}" in the same line.
+The ``\texttt{e}" flag is used to avoid an error message when ``\texttt{x\_cnt}" does not appear in the file.
+Otherwise ``\texttt{:argdo}" would abort on the first file where ``\texttt{x\_cnt}" was not found.
 
-The "\texttt{|}" separates two commands.
-The following "\texttt{update}" command writes the file only if it was changed.
-If no "\texttt{x\_cnt}" was changed to "\texttt{x\_counter}" nothing happens.
+The ``\texttt{|}" separates two commands.
+The following ``\texttt{update}" command writes the file only if it was changed.
+If no ``\texttt{x\_cnt}" was changed to ``\texttt{x\_counter}" nothing happens.
 
-There is also the "\texttt{:windo}" command, which executes its argument in all windows.
-And "\texttt{:bufdo}" executes its argument on all buffers.
+There is also the ``\texttt{:windo}" command, which executes its argument in all windows.
+And ``\texttt{:bufdo}" executes its argument on all buffers.
 Be careful with this, because you might have more files in the buffer list than you think.
-Check this with the "\texttt{:buffers}" command (or "\texttt{:ls}").
+Check this with the ``\texttt{:buffers}" command (or ``\texttt{:ls}").
 \subsection{Using Vim from a shell script}
-Suppose you have a lot of files in which you need to change the string "-person-" to "Jones" and then print it.
+Suppose you have a lot of files in which you need to change the string ``-person-" to ``Jones" and then print it.
 How do you do that?  One way is to do a lot of typing.
 The other is to write a shell script to do the work.
 
@@ -158,7 +158,7 @@ The Ex mode commands you need are as follows:
  quit
 \end{Verbatim}
 
-You put these commands in the file "\texttt{change.vim}".
+You put these commands in the file ``\texttt{change.vim}".
 Now to run the editor in batch mode, use this shell script:
 
 \begin{Verbatim}[samepage=true]
@@ -170,24 +170,24 @@ Now to run the editor in batch mode, use this shell script:
 
 The for-done loop is a shell construct to repeat the two lines in between, while the \texttt{\$file} variable is set to a different file name each time.
 
-The second line runs the Vim editor in Ex mode (-e argument) on the file \texttt{\$file} and reads commands from the file "\texttt{change.vim}".
+The second line runs the Vim editor in Ex mode (-e argument) on the file \texttt{\$file} and reads commands from the file ``\texttt{change.vim}".
 The -s argument tells Vim to operate in silent mode.
 In other words, do not keep outputting the :prompt, or any other prompt for that matter.
 
-The "\texttt{lpr -r tempfile}" command prints the resulting "\texttt{tempfile}" and deletes it (that's what the -r argument does).
+The ``\texttt{lpr -r tempfile}" command prints the resulting ``\texttt{tempfile}" and deletes it (that's what the -r argument does).
 \subsubsection{Reading from stdin}
 Vim can read text on standard input.
 Since the normal way is to read commands there, you must tell Vim to read text instead.
-This is done by passing the "\texttt{-}" argument in place of a file.
+This is done by passing the ``\texttt{-}" argument in place of a file.
 Example:
 
 \begin{Verbatim}[samepage=true]
  ls | vim -
 \end{Verbatim}
 
-This allows you to edit the output of the "\texttt{ls}" command, without first saving the text in a file.
+This allows you to edit the output of the ``\texttt{ls}" command, without first saving the text in a file.
 
-If you use the standard input to read text from, you can use the "\texttt{-S}" argument to read a script:
+If you use the standard input to read text from, you can use the ``\texttt{-S}" argument to read a script:
 
 \begin{Verbatim}[samepage=true]
  producer | vim -S change.vim -
@@ -200,11 +200,11 @@ If you really want to use Normal mode commands in a script, you can use it like 
  vim -s script file.txt ...
 \end{Verbatim}
  
-\emph{Note}: "\texttt{-s}" has a different meaning when it is used without "\texttt{-e}".
-Here it means to source the "\texttt{script}" as Normal mode commands.
-When used with "\texttt{-e}" it means to be silent, and doesn't use the next argument as a file name.
+\emph{Note}: ``\texttt{-s}" has a different meaning when it is used without ``\texttt{-e}".
+Here it means to source the ``\texttt{script}" as Normal mode commands.
+When used with ``\texttt{-e}" it means to be silent, and doesn't use the next argument as a file name.
 
-The commands in "\texttt{script}" are executed like you typed them.
+The commands in ``\texttt{script}" are executed like you typed them.
 Don't forget that a line break is interpreted as pressing <Enter>.
 In Normal mode that moves the cursor to the next line.
 
@@ -217,11 +217,11 @@ This is how you do that:
  vim -w script file.txt ...
 \end{Verbatim}
 
-All typed keys will be written to "\texttt{script}".
+All typed keys will be written to ``\texttt{script}".
 If you make a small mistake you can just continue and remember to edit the script later.
 
-The "\texttt{-w}" argument appends to an existing script.
+The ``\texttt{-w}" argument appends to an existing script.
 That is good when you want to record the script bit by bit.
-If you want to start from scratch and start all over, use the "\texttt{-W}" argument.
+If you want to start from scratch and start all over, use the ``\texttt{-W}" argument.
 It overwrites any existing file.
 \clearpage
