--- a/src/usr_06.tex
+++ b/src/usr_06.tex
@@ -22,7 +22,7 @@ Suddenly comments are blue, keywords brown and strings red.
 This makes it easy to overview the file.
 After a while you will find that black\&white text slows you down!
 
-If you always want to use syntax highlighting, put the "\texttt{:syntax enable}" command in your |\texttt{:h vimrc}| file.
+If you always want to use syntax highlighting, put the ``\texttt{:syntax enable}" command in your |\texttt{:h vimrc}| file.
 
 If you want syntax highlighting only when the terminal supports colors, you can put this in your |\texttt{:h vimrc}| file:
 
@@ -32,7 +32,7 @@ If you want syntax highlighting only when the terminal supports colors, you can 
  endif
  \end{Verbatim}
 
-If you want syntax highlighting only in the GUI version, put the "\texttt{:syntax enable}" command in your |\texttt{:h gvimrc}| file.
+If you want syntax highlighting only in the GUI version, put the ``\texttt{:syntax enable}" command in your |\texttt{:h gvimrc}| file.
 
 \subsection{No or wrong colors?}
 \label{No or wrong colors?}
@@ -70,7 +70,7 @@ There can be a number of reasons why you don't see colors:
 		 :set filetype
 								\end{Verbatim}
 
-								If the result is "filetype=" then the problem is indeed that Vim doesn't know what type of file this is.
+								If the result is ``filetype=" then the problem is indeed that Vim doesn't know what type of file this is.
 								You can set the type manually:
 
 								\begin{Verbatim}[samepage=true]
@@ -116,8 +116,8 @@ Or the colors could be wrong:
 		 :set background=light
 												\end{Verbatim}
 
-								Make sure you put this \emph{before} the "\texttt{:syntax enable}" command, otherwise the colors will already have been set.
-								You could do "\texttt{:syntax reset}" after setting \texttt{'background'} to make Vim set the default colors again.
+								Make sure you put this \emph{before} the ``\texttt{:syntax enable}" command, otherwise the colors will already have been set.
+								You could do ``\texttt{:syntax reset}" after setting \texttt{'background'} to make Vim set the default colors again.
 
 				\item [The colors are wrong when scrolling bottom to top.]
 								Vim doesn't read the whole file to parse the text.
@@ -141,11 +141,11 @@ You can also type the command:
  :colorscheme evening
  \end{Verbatim}
 
-"evening" is the name of the color scheme.
+``evening" is the name of the color scheme.
 There are several others you might want to try out.
 Look in the directory \texttt{\$VIMRUNTIME/colors}.
 
-When you found the color scheme that you like, add the "\texttt{:colorscheme}" command to your |\texttt{:h vimrc}| file.
+When you found the color scheme that you like, add the ``\texttt{:colorscheme}" command to your |\texttt{:h vimrc}| file.
 
 You could also write your own color scheme.
 This is how you do it:
@@ -180,8 +180,8 @@ This is how you do it:
  :highlight Comment ctermfg=green guifg=green
 								\end{Verbatim}
 
-								Attributes you can use for "\texttt{cterm}" and "\texttt{gui}" are "\texttt{bold}" and "\texttt{underline}".
-								If you want both, use "\texttt{bold,underline}".
+								Attributes you can use for ``\texttt{cterm}" and ``\texttt{gui}" are ``\texttt{bold}" and ``\texttt{underline}".
+								If you want both, use ``\texttt{bold,underline}".
 								For details see the |\texttt{:h :highlight}| command.
 
 				\item Tell Vim to always use your color scheme.
@@ -263,9 +263,9 @@ To print only a range of lines, use Visual mode to select the lines and then typ
  v100j:hardcopy
  \end{Verbatim}
 
-"\texttt{v}" starts Visual mode.
-"\texttt{100j}" moves a hundred lines down, they will be highlighted.
-Then "\texttt{:hardcopy}" will print those lines.
+``\texttt{v}" starts Visual mode.
+``\texttt{100j}" moves a hundred lines down, they will be highlighted.
+Then ``\texttt{:hardcopy}" will print those lines.
 You can use other commands to move in Visual mode, of course.
 
 This also works on Unix, if you have a PostScript printer.
