--- a/src/usr_10.tex
+++ b/src/usr_10.tex
@@ -8,18 +8,18 @@ an external program to do really complicated things.
 \etocsettocstyle{\subsection*{Contents}}{}
 \localtableofcontents
 \subsection{Record and playback commands}
-The "\texttt{.}" command repeats the preceding change.
+The ``\texttt{.}" command repeats the preceding change.
 But what if you want to do something more complex than a single change?  That's where command recording comes in.
 There are three steps:
 
 \begin{enumerate}
-				\item The "\texttt{q\{register\}}" command starts recording keystrokes into the register named \texttt{\{register\}}.
+				\item The ``\texttt{q\{register\}}" command starts recording keystrokes into the register named \texttt{\{register\}}.
 								The register name must be between a and z.
 				\item Type your commands.
 				\item To finish recording, press q (without any extra character).
 \end{enumerate}
 
-You can now execute the macro by typing the command "\texttt{@\{register\}}".
+You can now execute the macro by typing the command ``\texttt{@\{register\}}".
 
 Take a look at how to use these commands in practice.
 You have a list of filenames that look like this:
@@ -46,16 +46,16 @@ Next you execute the following commands:
 \begin{center}\begin{tabular}{l l}
 				\texttt{qa} & Start recording a macro in register a.\\
 				\texttt{\^{}} & Move to the beginning of the line.\\
-				\texttt{i\#include "<Esc>} & Insert the string \texttt{\#include "} at the beginning of the line.\\
+				\texttt{i\#include ``<Esc>} & Insert the string \texttt{\#include "} at the beginning of the line.\\
 				\texttt{\$} & Move to the end of the line.\\
 				\texttt{a"<Esc>} & Append the character double quotation mark (") to the end of the line.\\
 				\texttt{j} & Go to the next line.\\
 				\texttt{q} & Stop recording the macro.\\
 \end{tabular}\end{center}
 
-Now that you have done the work once, you can repeat the change by typing the command "\texttt{@a}" three times.
+Now that you have done the work once, you can repeat the change by typing the command ``\texttt{@a}" three times.
 
-The "\texttt{@a}" command can be preceded by a count, which will cause the macro to be executed that number of times.
+The ``\texttt{@a}" command can be preceded by a count, which will cause the macro to be executed that number of times.
 In this case you would type:
 
 \begin{Verbatim}[samepage=true]
@@ -64,16 +64,16 @@ In this case you would type:
 
 \subsubsection{Move and execute}
 You might have the lines you want to change in various places.
-Just move the cursor to each location and use the "\texttt{@a}" command.
-If you have done that once, you can do it again with "\texttt{@@}".
+Just move the cursor to each location and use the ``\texttt{@a}" command.
+If you have done that once, you can do it again with ``\texttt{@@}".
 That's a bit easier to type.
-If you now execute register b with "@b", the next "@@" will use register b.
+If you now execute register b with ``@b", the next ``@@" will use register b.
 
-If you compare the playback method with using "\texttt{.}", there are several differences.
-First of all, "\texttt{.}" can only repeat one change.
-As seen in the example above, "\texttt{@a}" can do several changes, and move around as well.
-Secondly, "\texttt{.}" can only remember the last change.
-Executing a register allows you to make any changes and then still use "\texttt{@a}" to replay the recorded commands.
+If you compare the playback method with using ``\texttt{.}", there are several differences.
+First of all, ``\texttt{.}" can only repeat one change.
+As seen in the example above, ``\texttt{@a}" can do several changes, and move around as well.
+Secondly, ``\texttt{.}" can only remember the last change.
+Executing a register allows you to make any changes and then still use ``\texttt{@a}" to replay the recorded commands.
 Finally, you can use 26 different registers.
 Thus you can remember 26 different command sequences to execute.
 
@@ -83,7 +83,7 @@ The registers used for recording are the same ones you used for yank and delete 
 This allows you to mix recording with other commands to manipulate the registers.
 
 Suppose you have recorded a few commands in register \texttt{n}.
-When you execute this with "\texttt{@n}" you notice you did something wrong.
+When you execute this with ``\texttt{@n}" you notice you did something wrong.
 You could try recording again, but perhaps you will make another mistake.
 Instead, use this trick:
 
@@ -97,7 +97,7 @@ Instead, use this trick:
 				\texttt{dd} & Delete the scratch line. \\
 \end{tabular}\end{center}
 
-Now you can execute the corrected commands with "\texttt{@n}".
+Now you can execute the corrected commands with ``\texttt{@n}".
 (If your recorded commands include line breaks, adjust the last two items in the example to include all the lines.)
 \subsubsection{Appending to a register}
 So far we have used a lowercase letter for the register name.
@@ -111,7 +111,7 @@ This can be done with:
  qC/word<Enter>q
 \end{Verbatim}
 
-You start with "\texttt{qC}", which records to the \texttt{c} register and appends.
+You start with ``\texttt{qC}", which records to the \texttt{c} register and appends.
 Thus writing to an uppercase register name means to append to the register with the same letter, but lowercase.
 
 This works both with recording and with yank and delete commands.
@@ -133,29 +133,29 @@ The a register now contains all those lines, in the order you yanked them.
 
 \subsection{Substitution}
 \label{find-replace}
-The "\texttt{:substitute}" command enables you to perform string replacements on a whole range of lines.
+The ``\texttt{:substitute}" command enables you to perform string replacements on a whole range of lines.
 The general form of this command is as follows:
 
 \begin{Verbatim}[samepage=true]
  :[range]substitute/from/to/[flags]
 \end{Verbatim}
 
-This command changes the "from" string to the "to" string in the lines specified with [range].
-For example, you can change "Professor" to "Teacher" in all lines with the following command:
+This command changes the ``from" string to the ``to" string in the lines specified with [range].
+For example, you can change ``Professor" to ``Teacher" in all lines with the following command:
 
 \begin{Verbatim}[samepage=true]
  :%substitute/Professor/Teacher/
 \end{Verbatim}
  
-\emph{Note}: The "\texttt{:substitute}" command is almost never spelled out completely.
-Most of the time, people use the abbreviated version "\texttt{:s}".
+\emph{Note}: The ``\texttt{:substitute}" command is almost never spelled out completely.
+Most of the time, people use the abbreviated version ``\texttt{:s}".
 From here on the abbreviation will be used.
 
-The "\texttt{\%}" before the command specifies the command works on all lines.
-Without a range, "\texttt{:s}" only works on the current line.
+The ``\texttt{\%}" before the command specifies the command works on all lines.
+Without a range, ``\texttt{:s}" only works on the current line.
 More about ranges in the next section |\hyperref[Command ranges]{\texttt{Command ranges}}|.
 
-By default, the "\texttt{:substitute}" command changes only the first occurrence on each line.
+By default, the ``\texttt{:substitute}" command changes only the first occurrence on each line.
 For example, the preceding command changes the line:
 
 \begin{Verbatim}[samepage=true]
@@ -181,15 +181,15 @@ results in (starting with the original line):
     Teacher Smith criticized Teacher Johnson today. 
 \end{Verbatim}
 
-Other flags include \texttt{p} (print), which causes the "\texttt{:substitute}" command to print out the last line it changes.
-The \texttt{c} (confirm) flag tells "\texttt{:substitute}" to ask you for confirmation before it performs each substitution.
+Other flags include \texttt{p} (print), which causes the ``\texttt{:substitute}" command to print out the last line it changes.
+The \texttt{c} (confirm) flag tells ``\texttt{:substitute}" to ask you for confirmation before it performs each substitution.
 Enter the following:
 
 \begin{Verbatim}[samepage=true]
  :%s/Professor/Teacher/c
 \end{Verbatim}
 
-Vim finds the first occurrence of "Professor" and displays the text it is about to change.
+Vim finds the first occurrence of ``Professor" and displays the text it is about to change.
 You get the following prompt:
 
 \begin{Verbatim}[samepage=true]
@@ -208,15 +208,15 @@ At this point, you must enter one of the following answers:
 				CTRL-Y & Scroll the text one line down. \\
 \end{tabular}\end{center}
 
-The "from" part of the substitute command is actually a pattern.
+The ``from" part of the substitute command is actually a pattern.
 The same kind as used for the search command.
-For example, this command only substitutes "the" when it appears at the start of a line:
+For example, this command only substitutes ``the" when it appears at the start of a line:
 
 \begin{Verbatim}[samepage=true]
  :s/^the/these/
 \end{Verbatim}
 
-If you are substituting with a "from" or "to" part that includes a slash, you need to put a backslash before it.
+If you are substituting with a ``from" or ``to" part that includes a slash, you need to put a backslash before it.
 A simpler way is to use another character instead of the slash.
 A plus, for example:
 
@@ -225,7 +225,7 @@ A plus, for example:
 \end{Verbatim}
 \subsection{Command ranges}
 \label{Command ranges}
-The "\texttt{:substitute}" command, and many other : commands, can be applied to a selection of lines.
+The ``\texttt{:substitute}" command, and many other : commands, can be applied to a selection of lines.
 This is called a range.
 
 The simple form of a range is \texttt{\{number\}}, \texttt{\{number\}}.
@@ -246,8 +246,8 @@ A single number can be used to address one specific line:
 \end{Verbatim}
 
 Some commands work on the whole file when you do not specify a range.
-To make them work on the current line the "\texttt{.}" address is used.
-The "\texttt{:write}" command works like that.
+To make them work on the current line the ``\texttt{.}" address is used.
+The ``\texttt{:write}" command works like that.
 Without a range, it writes the whole file.
 To make it write only the current line into a file:
 
@@ -257,18 +257,18 @@ To make it write only the current line into a file:
 
 The first line always has number one.
 How about the last line?
-The "\texttt{\$}" character is used for this.
+The ``\texttt{\$}" character is used for this.
 For example, to substitute in the lines from the cursor to the end:
 
 \begin{Verbatim}[samepage=true]
  :.,$s/yes/no/
 \end{Verbatim}
 
-The "\texttt{\%}" range that we used before, is actually a short way to say "\texttt{1,\$}", from the first to the last line.
+The ``\texttt{\%}" range that we used before, is actually a short way to say ``\texttt{1,\$}", from the first to the last line.
 \subsubsection{Using a pattern in a range}
-Suppose you are editing a chapter in a book, and want to replace all occurrences of "grey" with "gray".
+Suppose you are editing a chapter in a book, and want to replace all occurrences of ``grey" with ``gray".
 But only in this chapter, not in the next one.
-You know that only chapter boundaries have the word "Chapter" in the first column.
+You know that only chapter boundaries have the word ``Chapter" in the first column.
 This command will work then:
 
 \begin{Verbatim}[samepage=true]
@@ -276,14 +276,14 @@ This command will work then:
 \end{Verbatim}
 
 You can see a search pattern is used twice.
-The first "\texttt{?\^{}Chapter?}" finds the line above the current position that matches this pattern.
+The first ``\texttt{?\^{}Chapter?}" finds the line above the current position that matches this pattern.
 Thus the \texttt{?pattern?} range is used to search backwards.
-Similarly, "\texttt{/\^{}Chapter/}" is used to search forward for the start of the next chapter.
+Similarly, ``\texttt{/\^{}Chapter/}" is used to search forward for the start of the next chapter.
 
-To avoid confusion with the slashes, the "\texttt{=}" character was used in the substitute command here.
+To avoid confusion with the slashes, the ``\texttt{=}" character was used in the substitute command here.
 A slash or another character would have worked as well.
 \subsubsection{Add and subtract}
-There is a slight error in the above command: If the title of the next chapter had included "grey" it would be replaced as well.
+There is a slight error in the above command: If the title of the next chapter had included ``grey" it would be replaced as well.
 Maybe that's what you wanted, but what if you didn't?  Then you can specify an offset.
 
 To search for a pattern and then use the line above it:
@@ -311,7 +311,7 @@ This specifies the range that starts three lines below the cursor and ends five 
 Instead of figuring out the line numbers of certain positions, remembering them and typing them in a range, you can use marks.
 
 Place the marks as mentioned in chapter 3.
-For example, use "\texttt{mt}" to mark the top of an area and "\texttt{mb}" to mark the bottom.
+For example, use ``\texttt{mt}" to mark the top of an area and ``\texttt{mb}" to mark the bottom.
 Then you can use this range to specify the lines between the marks (including the lines with the marks):
 
 \begin{Verbatim}[samepage=true]
@@ -319,7 +319,7 @@ Then you can use this range to specify the lines between the marks (including th
 \end{Verbatim}
 \subsubsection{Visual mode and ranges}
 You can select text with Visual mode.
-If you then press "\texttt{:}" to start a colon command, you will see this:
+If you then press ``\texttt{:}" to start a colon command, you will see this:
 
 \begin{Verbatim}[samepage=true]
  :'<,'>
@@ -333,7 +333,7 @@ This might change in a future version of Vim.
 
 The \texttt{'<} and \texttt{'>} are actually marks, placed at the start and end of the Visual selection.
 The marks remain at their position until another Visual selection is made.
-Thus you can use the "\texttt{'<}" command to jump to position where the Visual area started.
+Thus you can use the ``\texttt{'<}" command to jump to position where the Visual area started.
 And you can mix the marks with other items:
 
 \begin{Verbatim}[samepage=true]
@@ -342,19 +342,19 @@ And you can mix the marks with other items:
 
 This addresses the lines from the end of the Visual area to the end of the file.
 \subsubsection{A number of lines}
-When you know how many lines you want to change, you can type the number and then ":".
-For example, when you type "5:", you will get:
+When you know how many lines you want to change, you can type the number and then ``:".
+For example, when you type ``5:", you will get:
 
 \begin{Verbatim}[samepage=true]
  :.,.+4
 \end{Verbatim}
 
 Now you can type the command you want to use.
-It will use the range "\texttt{.}" (current line) until "\texttt{.+4}" (four lines down).
+It will use the range ``\texttt{.}" (current line) until ``\texttt{.+4}" (four lines down).
 Thus it spans five lines.
 
 \subsection{The global command}
-The "\texttt{:global}" command is one of the more powerful features of Vim.
+The ``\texttt{:global}" command is one of the more powerful features of Vim.
 It allows you to find a match for a pattern and execute a command there.
 The general form is:
 
@@ -362,47 +362,47 @@ The general form is:
  :[range]global/{pattern}/{command}
 \end{Verbatim}
 
-This is similar to the "\texttt{:substitute}" command.
+This is similar to the ``\texttt{:substitute}" command.
 But, instead of replacing the matched text with other text, the command \texttt{\{command\}} is executed.
 
 \emph{Note}:
-The command executed for "\texttt{:global}" must be one that starts with a colon.
+The command executed for ``\texttt{:global}" must be one that starts with a colon.
 Normal mode commands can not be used directly.
 The |\texttt{:h :normal}| command can do this for you.
 
-Suppose you want to change "foobar" to "barfoo", but only in C++ style comments.
-These comments start with "\texttt{//}".
+Suppose you want to change ``foobar" to ``barfoo", but only in C++ style comments.
+These comments start with ``\texttt{//}".
 Use this command:
 
 \begin{Verbatim}[samepage=true]
  :g+//+s/foobar/barfoo/g
 \end{Verbatim}
 
-This starts with "\texttt{:g}".
-That is short for ":global", just like ":s" is short for "\texttt{:substitute}".
+This starts with ``\texttt{:g}".
+That is short for ``:global", just like ``:s" is short for ``\texttt{:substitute}".
 Then the pattern, enclosed in plus characters.
 Since the pattern we are looking for contains a slash, this uses the plus character to separate the pattern.
-Next comes the substitute command that changes "foobar" into "barfoo".
+Next comes the substitute command that changes ``foobar" into ``barfoo".
 
 The default range for the global command is the whole file.
 Thus no range was specified in this example.
-This is different from "\texttt{:substitute}", which works on one line without a range.
+This is different from ``\texttt{:substitute}", which works on one line without a range.
 
-The command isn't perfect, since it also matches lines where "\texttt{//}" appears halfway a line, and the substitution will also take place before the "\texttt{//}".
+The command isn't perfect, since it also matches lines where ``\texttt{//}" appears halfway a line, and the substitution will also take place before the ``\texttt{//}".
 
-Just like with "\texttt{:substitute}", any pattern can be used.
+Just like with ``\texttt{:substitute}", any pattern can be used.
 When you learn more complicated patterns later, you can use them here.
 \subsection{Visual block mode}
 With CTRL-V you can start selection of a rectangular area of text.
 There are a few commands that do something special with the text block.
 
-There is something special about using the "\texttt{\$}" command in Visual block mode.
-When the last motion command used was "\texttt{\$}", all lines in the Visual selection will extend until the end of the line, also when the line with the cursor is shorter.
+There is something special about using the ``\texttt{\$}" command in Visual block mode.
+When the last motion command used was ``\texttt{\$}", all lines in the Visual selection will extend until the end of the line, also when the line with the cursor is shorter.
 This remains effective until you use a motion command that moves the cursor horizontally.
-Thus using "\texttt{j}" keeps it, "\texttt{h}" stops it.
+Thus using ``\texttt{j}" keeps it, ``\texttt{h}" stops it.
 
 \subsubsection{Inserting text}
-The command  "\texttt{I\{string\}<Esc>}" inserts the text \texttt{\{string\}} in each line, just left of the visual block.
+The command  ``\texttt{I\{string\}<Esc>}" inserts the text \texttt{\{string\}} in each line, just left of the visual block.
 You start by pressing CTRL-V to enter visual block mode.
 Now you move the cursor to define your block.
 Next you type I to enter Insert mode, followed by the text to insert.
@@ -418,8 +418,8 @@ Example:
     include four 
 \end{Verbatim}
 
-Move the cursor to the "o" of "one" and press CTRL-V.
-Move it down with "3j" to "four".
+Move the cursor to the ``o" of ``one" and press CTRL-V.
+Move it down with ``3j" to ``four".
 You now have a block selection that spans four lines.
 Now type:
 
@@ -437,7 +437,7 @@ The result:
 \end{Verbatim}
 
 If the block spans short lines that do not extend into the block, the text is not inserted in that line.
-For example, make a Visual block selection that includes the word "long" in the first and last line of this text, and thus has no text selected in the second line:
+For example, make a Visual block selection that includes the word ``long" in the first and last line of this text, and thus has no text selected in the second line:
 
 \begin{Verbatim}[samepage=true]
     This is a long line 
@@ -447,7 +447,7 @@ For example, make a Visual block selection that includes the word "long" in the 
               ^^^^ selected block
 \end{Verbatim}
 
-Now use the command "\texttt{Ivery <Esc>}".
+Now use the command ``\texttt{Ivery <Esc>}".
 The result is:
 
 \begin{Verbatim}[samepage=true]
@@ -458,16 +458,16 @@ The result is:
 
 In the short line no text was inserted.
 
-If the string you insert contains a newline, the "\texttt{I}" acts just like a Normal insert command and affects only the first line of the block.
+If the string you insert contains a newline, the ``\texttt{I}" acts just like a Normal insert command and affects only the first line of the block.
 
-The "\texttt{A}" command works the same way, except that it appends after the right side of the block.
+The ``\texttt{A}" command works the same way, except that it appends after the right side of the block.
 And it does insert text in a short line.
 Thus you can make a choice whether you do or don't want to append text to a short line.
 
-There is one special case for "A": Select a Visual block and then use "\texttt{\$}" to make the block extend to the end of each line.
-Using "\texttt{A}" now will append the text to the end of each line.
+There is one special case for ``A": Select a Visual block and then use ``\texttt{\$}" to make the block extend to the end of each line.
+Using ``\texttt{A}" now will append the text to the end of each line.
 
-Using the same example from above, and then typing "\texttt{\$A XXX<Esc>}", you get this result:
+Using the same example from above, and then typing ``\texttt{\$A XXX<Esc>}", you get this result:
 
 \begin{Verbatim}[samepage=true]
     This is a long line XXX 
@@ -475,14 +475,14 @@ Using the same example from above, and then typing "\texttt{\$A XXX<Esc>}", you 
     Any other long line XXX 
 \end{Verbatim}
 
-This really requires using the "\texttt{\$}" command.
+This really requires using the ``\texttt{\$}" command.
 Vim remembers that it was used.
 Making the same selection by moving the cursor to the end of the longest line with other movement commands will not have the same result.
 \subsubsection{Changing text}
-The Visual block "\texttt{c}" command deletes the block and then throws you into Insert mode to enable you to type in a string.
+The Visual block ``\texttt{c}" command deletes the block and then throws you into Insert mode to enable you to type in a string.
 The string will be inserted in each line in the block.
 
-Starting with the same selection of the "long" words as above, then typing "\texttt{c\_LONG\_<Esc>}", you get this:
+Starting with the same selection of the ``long" words as above, then typing ``\texttt{c\_LONG\_<Esc>}", you get this:
 
 \begin{Verbatim}[samepage=true]
     This is a _LONG_ line 
@@ -490,13 +490,13 @@ Starting with the same selection of the "long" words as above, then typing "\tex
     Any other _LONG_ line 
 \end{Verbatim}
 
-Just like with "\texttt{I}" the short line is not changed.
+Just like with ``\texttt{I}" the short line is not changed.
 Also, you can't enter a newline in the new text.
 
-The "\texttt{C}" command deletes text from the left edge of the block to the end of line.
+The ``\texttt{C}" command deletes text from the left edge of the block to the end of line.
 It then puts you in Insert mode so that you can type in a string, which is added to the end of each line.
 
-Starting with the same text again, and typing "\texttt{Cnew text<Esc>}" you get:
+Starting with the same text again, and typing ``\texttt{Cnew text<Esc>}" you get:
 
 \begin{Verbatim}[samepage=true]
     This is a new text 
@@ -504,7 +504,7 @@ Starting with the same text again, and typing "\texttt{Cnew text<Esc>}" you get:
     Any other new text 
 \end{Verbatim}
 
-Notice that, even though only the "long" word was selected, the text after it is deleted as well.
+Notice that, even though only the ``long" word was selected, the text after it is deleted as well.
 Thus only the location of the left edge of the visual block really matters.
 
 Again, short lines that do not reach into the block are excluded.
@@ -518,8 +518,8 @@ Other commands that change the characters in the block:
 \end{tabular} \end{center}
 
 \subsubsection{Filling with a character}
-To fill the whole block with one character, use the "\texttt{r}" command.
-Again, starting with the same example text from above, and then typing "\texttt{rx}":
+To fill the whole block with one character, use the ``\texttt{r}" command.
+Again, starting with the same example text from above, and then typing ``\texttt{rx}":
 
 \begin{Verbatim}[samepage=true]
     This is a xxxx line 
@@ -531,10 +531,10 @@ Again, starting with the same example text from above, and then typing "\texttt{
 If you want to include characters beyond the end of the line in the block, check out the \texttt{'virtualedit'} feature in chapter 25.
 
 \subsubsection{Shifting}
-The command "\texttt{>}" shifts the selected text to the right one shift amount, inserting whitespace.
+The command ``\texttt{>}" shifts the selected text to the right one shift amount, inserting whitespace.
 The starting point for this shift is the left edge of the visual block.
 
-With the same example again, "\texttt{>}" gives this result:
+With the same example again, ``\texttt{>}" gives this result:
 
 \begin{Verbatim}[samepage=true]
     This is a     long line 
@@ -549,30 +549,30 @@ To change it to use 4 spaces:
  :set shiftwidth=4
 \end{Verbatim}
 
-The "\texttt{<}" command removes one shift amount of whitespace at the left edge of the block.
+The ``\texttt{<}" command removes one shift amount of whitespace at the left edge of the block.
 This command is limited by the amount of text that is there; so if there is less than a shift amount of whitespace available, it removes what it can.
 
 
 \subsubsection{Joining lines}
-The "\texttt{J}" command joins all selected lines together into one line.
+The ``\texttt{J}" command joins all selected lines together into one line.
 Thus it removes the line breaks.
 Actually, the line break, leading white space and trailing white space is replaced by one space.
 Two spaces are used after a line ending (that can be changed with the \texttt{'joinspaces'} option).
 
 Let's use the example that we got so familiar with now.
-The result of using the "\texttt{J}" command:
+The result of using the ``\texttt{J}" command:
 
 \begin{Verbatim}[samepage=true]
     This is a long line short Any other long line 
 \end{Verbatim}
 
-The "J" command doesn't require a blockwise selection.
-It works with "v" and "\texttt{V}" selection in exactly the same way.
+The ``J" command doesn't require a blockwise selection.
+It works with ``v" and ``\texttt{V}" selection in exactly the same way.
 
-If you don't want the white space to be changed, use the "\texttt{gJ}" command.
+If you don't want the white space to be changed, use the ``\texttt{gJ}" command.
 \subsection{Reading and writing part of a file}
 When you are writing an e-mail message, you may want to include another file.
-This can be done with the "\texttt{:read \{filename\}}" command.
+This can be done with the ``\texttt{:read \{filename\}}" command.
 The text of the file is put below the cursor line.
 
 Starting with this text:
@@ -589,7 +589,7 @@ Move the cursor to the second line and type:
  :read patch
 \end{Verbatim}
 
-The file named "\texttt{patch}" will be inserted, with this result:
+The file named ``\texttt{patch}" will be inserted, with this result:
 
 \begin{Verbatim}[samepage=true]
     Hi John, 
@@ -601,9 +601,9 @@ The file named "\texttt{patch}" will be inserted, with this result:
     Bye, Pierre. 
 \end{Verbatim}
 
-The "\texttt{:read}" command accepts a range.
+The ``\texttt{:read}" command accepts a range.
 The file will be put below the last line number of this range.
-Thus "\texttt{:\$r patch}" appends the file "\texttt{patch}" at the end of the file.
+Thus ``\texttt{:\$r patch}" appends the file ``\texttt{patch}" at the end of the file.
 
 What if you want to read the file above the first line?  This can be done with the line number zero.
 This line doesn't really exist, you will get an error message when using it with most commands.
@@ -613,9 +613,9 @@ But this command is allowed:
  :0read patch
 \end{Verbatim}
 
-The file "\texttt{patch}" will be put above the first line of the file.
+The file ``\texttt{patch}" will be put above the first line of the file.
 \subsubsection{Writing a range of lines}
-To write a range of lines to a file, the "\texttt{:write}" command can be used.
+To write a range of lines to a file, the ``\texttt{:write}" command can be used.
 Without a range it writes the whole file.
 With a range only the specified lines are written:
 
@@ -623,7 +623,7 @@ With a range only the specified lines are written:
  :.,$write tempo
 \end{Verbatim}
 
-This writes the lines from the cursor until the end of the file into the file "\texttt{tempo}".
+This writes the lines from the cursor until the end of the file into the file ``\texttt{tempo}".
 If this file already exists you will get an error message.
 Vim protects you from accidentally overwriting an existing file.
 If you know what you are doing and want to overwrite the file, append !:
@@ -632,7 +632,7 @@ If you know what you are doing and want to overwrite the file, append !:
  :.,$write! tempo
 \end{Verbatim}
 
-CAREFUL: The ! must follow the "\texttt{:write}" command immediately, without white space.
+CAREFUL: The ! must follow the ``\texttt{:write}" command immediately, without white space.
 Otherwise it becomes a filter command, which is explained later in this chapter.
 \subsubsection{Appending to a file}
 In the first section of this chapter was explained how to collect a number of lines into a register.
@@ -649,7 +649,7 @@ Now move the cursor to the second line you want to collect, and type this:
  :.write >>collection
 \end{Verbatim}
 
-The "\texttt{>>}" tells Vim the "collection" file is not to be written as a new file, but the line must be appended at the end.
+The ``\texttt{>>}" tells Vim the ``collection" file is not to be written as a new file, but the line must be appended at the end.
 You can repeat this as many times as you like.
 \subsection{Formatting text}
 When you are typing plain text, it's nice if the length of each line is automatically trimmed to fit in the window.
@@ -677,37 +677,37 @@ To tell Vim to format the current paragraph:
  gqap
 \end{Verbatim}
 
-This starts with the "\texttt{gq}" command, which is an operator.
-Following is "\texttt{ap}", the text object that stands for "a paragraph".
+This starts with the ``\texttt{gq}" command, which is an operator.
+Following is ``\texttt{ap}", the text object that stands for ``a paragraph".
 A paragraph is separated from the next paragraph by an empty line.
 
 \emph{Note}:
 A blank line, which contains white space, does NOT separate paragraphs.
 This is hard to notice!
 
-Instead of "\texttt{ap}" you could use any motion or text object.
+Instead of ``\texttt{ap}" you could use any motion or text object.
 If your paragraphs are properly separated, you can use this command to format the whole file:
 
 \begin{Verbatim}[samepage=true]
  gggqG
 \end{Verbatim}
 
-"\texttt{gg}" takes you to the first line, "\texttt{gq}" is the format operator and "\texttt{G}" the motion that jumps to the last line.
+``\texttt{gg}" takes you to the first line, ``\texttt{gq}" is the format operator and ``\texttt{G}" the motion that jumps to the last line.
 
 In case your paragraphs aren't clearly defined, you can format just the lines you manually select.
 Move the cursor to the first line you want to format.
-Start with the command "\texttt{gqj}".
+Start with the command ``\texttt{gqj}".
 This formats the current line and the one below it.
 If the first line was short, words from the next line will be appended.
 If it was too long, words will be moved to the next line.
 The cursor moves to the second line.
-Now you can use "\texttt{.}" to repeat the command.
+Now you can use ``\texttt{.}" to repeat the command.
 Keep doing this until you are at the end of the text you want to format.
 
 \subsection{Changing case}
 You have text with section headers in lowercase.
-You want to make the word "section" all uppercase.
-Do this with the "\texttt{gU}" operator.
+You want to make the word ``section" all uppercase.
+Do this with the ``\texttt{gU}" operator.
 Start with the cursor in the first column:
 
 \begin{Verbatim}[samepage=true]
@@ -715,21 +715,21 @@ Start with the cursor in the first column:
     section header      ---->      SECTION header
 \end{Verbatim}
 
-The "\texttt{gu}" operator does exactly the opposite:
+The ``\texttt{gu}" operator does exactly the opposite:
 
 \begin{Verbatim}[samepage=true]
                          guw
     SECTION header      ---->      section header
 \end{Verbatim}
 
-You can also use "\texttt{g~}" to swap case.
+You can also use ``\texttt{g~}" to swap case.
 All these are operators, thus they work with any motion command, with text objects and in Visual mode.
 
 To make an operator work on lines you double it.
-The delete operator is "\texttt{d}", thus to delete a line you use "\texttt{dd}".
-Similarly, "\texttt{gugu}" makes a whole line lowercase.
-This can be shortened to "\texttt{guu}".
-"\texttt{gUgU}" is shortened to "\texttt{gUU}" and "\texttt{g~g~}" to "\texttt{g~~}".
+The delete operator is ``\texttt{d}", thus to delete a line you use ``\texttt{dd}".
+Similarly, ``\texttt{gugu}" makes a whole line lowercase.
+This can be shortened to ``\texttt{guu}".
+``\texttt{gUgU}" is shortened to ``\texttt{gUU}" and ``\texttt{g~g~}" to ``\texttt{g~~}".
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -740,7 +740,7 @@ Example:
 Vim has a very powerful set of commands, it can do anything.
 But there may still be something that an external command can do better or faster.
 
-The command "\texttt{!\{motion\}\{program\}}" takes a block of text and filters it through an external program.
+The command ``\texttt{!\{motion\}\{program\}}" takes a block of text and filters it through an external program.
 In other words, it runs the system command represented by \texttt{\{program\},} giving it the block of text represented by \texttt{\{motion\}} as input.
 The output of this command then replaces the selected block.
 
@@ -762,12 +762,12 @@ Next you execute the following command:
  !5G
 \end{Verbatim}
 
-The "\texttt{!}" tells Vim that you are performing a filter operation.
+The ``\texttt{!}" tells Vim that you are performing a filter operation.
 The Vim editor expects a motion command to follow, indicating which part of the file to filter.
-The "\texttt{5G}" command tells Vim to go to line 5, so it now knows that it is to filter lines 1 (the current line) through 5.
+The ``\texttt{5G}" command tells Vim to go to line 5, so it now knows that it is to filter lines 1 (the current line) through 5.
 
 In anticipation of the filtering, the cursor drops to the bottom of the screen and a ! prompt displays.
-You can now type in the name of the filter program, in this case "\texttt{sort}".
+You can now type in the name of the filter program, in this case ``\texttt{sort}".
 Therefore, your full command is as follows:
 
 \begin{Verbatim}[samepage=true]
@@ -786,9 +786,9 @@ The output of the program replaces these lines.
     last line             last line
 \end{Verbatim}
 
-The "\texttt{!!}" command filters the current line through a filter.
-In Unix the "\texttt{date}" command prints the current time and date.
-"\texttt{!!date<Enter>}" replaces the current line with the output of "\texttt{date}".
+The ``\texttt{!!}" command filters the current line through a filter.
+In Unix the ``\texttt{date}" command prints the current time and date.
+``\texttt{!!date<Enter>}" replaces the current line with the output of ``\texttt{date}".
 This is useful to add a timestamp to a file.
 
 \subsubsection{When it doesn't work}
@@ -805,8 +805,8 @@ When you have problems with filtering, check the values of these options:
 				\texttt{'shellredir'} & string used to write the command output into a file \\
 \end{tabular}\end{center}
 
-On Unix this is hardly ever a problem, because there are two kinds of shells: "sh" like and "csh" like.
-Vim checks the \texttt{'shell'} option and sets related options automatically, depending on whether it sees "csh" somewhere in \texttt{'shell'}.
+On Unix this is hardly ever a problem, because there are two kinds of shells: ``sh" like and ``csh" like.
+Vim checks the \texttt{'shell'} option and sets related options automatically, depending on whether it sees ``csh" somewhere in \texttt{'shell'}.
 
 On MS-Windows, however, there are many different shells and you might have to tune the options to make filtering work.
 Check the help for the options for more information.
@@ -822,8 +822,8 @@ on MS-Windows:
  :read !dir
 \end{Verbatim}
 
-The output of the "\texttt{ls}" or "\texttt{dir}" command is captured and inserted in the text, below the cursor.
-This is similar to reading a file, except that the "\texttt{!}" is used to tell Vim that a command follows.
+The output of the ``\texttt{ls}" or ``\texttt{dir}" command is captured and inserted in the text, below the cursor.
+This is similar to reading a file, except that the ``\texttt{!}" is used to tell Vim that a command follows.
 
 The command may have arguments.
 And a range can be used to tell where Vim should put the lines:
@@ -833,17 +833,17 @@ And a range can be used to tell where Vim should put the lines:
 \end{Verbatim}
 
 This inserts the current time and date in UTC format at the top of the file.
-(Well, if you have a date command that accepts the "\texttt{-u}" argument.) 
-Note the difference with using "!!date": that replaced a line, while ":read !date" will insert a line.
+(Well, if you have a date command that accepts the ``\texttt{-u}" argument.) 
+Note the difference with using ``!!date": that replaced a line, while ``:read !date" will insert a line.
 \subsubsection{Writing text to a command}
-The Unix command "\texttt{wc}" counts words.
+The Unix command ``\texttt{wc}" counts words.
 To count the words in the current file:
 
 \begin{Verbatim}[samepage=true]
  :write !wc
 \end{Verbatim}
 
-This is the same write command as before, but instead of a file name the "\texttt{!}" character is used and the name of an external command.
+This is the same write command as before, but instead of a file name the ``\texttt{!}" character is used and the name of an external command.
 The written text will be passed to the specified command as its standard input.
 The output could look like this:
 
@@ -851,7 +851,7 @@ The output could look like this:
        4      47     249 
 \end{Verbatim}
 
-The "\texttt{wc}" command isn't verbose.
+The ``\texttt{wc}" command isn't verbose.
 This means you have 4 lines, 47 words and 249 characters.
 
 Watch out for this mistake:
@@ -860,7 +860,7 @@ Watch out for this mistake:
  :write! wc
 \end{Verbatim}
 
-This will write the file "\texttt{wc}" in the current directory, with force.
+This will write the file ``\texttt{wc}" in the current directory, with force.
 White space is important here!
 
 \subsubsection{Redrawing the screen}
