--- a/src/usr_12.tex
+++ b/src/usr_12.tex
@@ -13,26 +13,26 @@ The substitute command can be used to replace all occurrences of a word with ano
  :%s/four/4/g
 \end{Verbatim}
 
-The "\texttt{\%}" range means to replace in all lines.
-The "\texttt{g}" flag at the end causes all words in a line to be replaced.
+The ``\texttt{\%}" range means to replace in all lines.
+The ``\texttt{g}" flag at the end causes all words in a line to be replaced.
 
-This will not do the right thing if your file also contains "thirtyfour".
-It would be replaced with "thirty4".
-To avoid this, use the "\texttt{\textbackslash{}<}" item to match the start of a word:
+This will not do the right thing if your file also contains ``thirtyfour".
+It would be replaced with ``thirty4".
+To avoid this, use the ``\texttt{\textbackslash{}<}" item to match the start of a word:
 
 \begin{Verbatim}[samepage=true]
  :%s/\<four/4/g
 \end{Verbatim}
 
-Obviously, this still goes wrong on "fourteen".  Use "\texttt{\textbackslash{}>}" to match the end of
+Obviously, this still goes wrong on ``fourteen".  Use ``\texttt{\textbackslash{}>}" to match the end of
 a word:
 
 \begin{Verbatim}[samepage=true]
  :%s/\<four\>/4/g
 \end{Verbatim}
 
-If you are programming, you might want to replace "four" in comments, but not in the code.
-Since this is difficult to specify, add the "\texttt{c}" flag to have the substitute command prompt you for each replacement:
+If you are programming, you might want to replace ``four" in comments, but not in the code.
+Since this is difficult to specify, add the ``\texttt{c}" flag to have the substitute command prompt you for each replacement:
 
 \begin{Verbatim}[samepage=true]
  :%s/\<four\>/4/gc
@@ -43,8 +43,8 @@ Suppose you want to replace a word in more than one file.
 You could edit each file and type the command manually.
 It's a lot faster to use record and playback.
 
-Let's assume you have a directory with C++ files, all ending in "\texttt{.cpp}".
-There is a function called "GetResp" that you want to rename to "GetAnswer".
+Let's assume you have a directory with C++ files, all ending in ``\texttt{.cpp}".
+There is a function called ``GetResp" that you want to rename to ``GetAnswer".
 
 \begin{center} \begin{tabularx}{\textwidth}{r p{11cm}} % I guessed at this length for the wrap TMC
 				\texttt{vim *.cpp} & Start Vim, defining the argument list to contain all the C++ files.
@@ -54,26 +54,26 @@ There is a function called "GetResp" that you want to rename to "GetAnswer".
 				\texttt{:wnext} & Write this file and move to the next one. \\
 				\texttt{q} & Stop recording. \\
 				\texttt{@q} & Execute the q register.
-				This will replay the substitution and "\texttt{:wnext}".
+				This will replay the substitution and ``\texttt{:wnext}".
 				You can verify that this doesn't produce an error message. \\
 				\texttt{999@q} & Execute the q register on the remaining files.  \\
 \end{tabularx} \end{center}
 
-At the last file you will get an error message, because "\texttt{:wnext}" cannot move to the next file.
+At the last file you will get an error message, because ``\texttt{:wnext}" cannot move to the next file.
 This stops the execution, and everything is done.
 
 \emph{Note}: When playing back a recorded sequence, an error stops the execution.
 Therefore, make sure you don't get an error message when recording.
 
-There is one catch: If one of the \texttt{.cpp} files does not contain the word "GetResp", you will get an error and replacing will stop.
-To avoid this, add the "\texttt{e}" flag to the substitute command:
+There is one catch: If one of the \texttt{.cpp} files does not contain the word ``GetResp", you will get an error and replacing will stop.
+To avoid this, add the ``\texttt{e}" flag to the substitute command:
 
 \begin{Verbatim}[samepage=true]
  :%s/\<GetResp\>/GetAnswer/ge
 \end{Verbatim}
 
-The "\texttt{e}" flag tells "\texttt{:substitute}" that not finding a match is not an error.
-\subsection{Change "Last, First" to "First Last"}
+The ``\texttt{e}" flag tells ``\texttt{:substitute}" that not finding a match is not an error.
+\subsection{Change ``Last, First" to ``First Last"}
 You have a list of names in this form:
 
 \begin{Verbatim}[samepage=true]
@@ -96,12 +96,12 @@ This can be done with just one command:
 
 Let's break this down in parts.
 Obviously it starts with a substitute command.
-The "\texttt{\%}" is the line range, which stands for the whole file.
+The ``\texttt{\%}" is the line range, which stands for the whole file.
 Thus the substitution is done in every line in the file.
 
-The arguments for the substitute command are "\texttt{/from/to/}".
-The slashes separate the "from" pattern and the "to" string.
-This is what the "from" pattern contains:
+The arguments for the substitute command are ``\texttt{/from/to/}".
+The slashes separate the ``from" pattern and the ``to" string.
+This is what the ``from" pattern contains:
 
 \begin{Verbatim}[samepage=true]
 	\([^,]*\), \(.*\) 
@@ -109,24 +109,24 @@ This is what the "from" pattern contains:
 
 \begin{center}
 				\begin{longtable}{r l}
-								The first part between \texttt{\textbackslash{}( \textbackslash{})} matches "Last" & \texttt{\textbackslash{}( \textbackslash{})} \\
+								The first part between \texttt{\textbackslash{}( \textbackslash{})} matches ``Last" & \texttt{\textbackslash{}( \textbackslash{})} \\
 								match anything but a comma & \texttt{[\^{},]} \\
 								any number of times & \texttt{*} \\
-								matches ", " literally & \texttt{,} \\
-								The second part between \texttt{\textbackslash{}( \textbackslash{})} matches "First" & \texttt{\textbackslash{}(  \textbackslash{})} \\
+								matches ``, " literally & \texttt{,} \\
+								The second part between \texttt{\textbackslash{}( \textbackslash{})} matches ``First" & \texttt{\textbackslash{}(  \textbackslash{})} \\
 								any character & \texttt{.} \\
 								any number of times & \texttt{*} \\
 				\end{longtable}
 \end{center}
 
-In the "to" part we have "\texttt{\textbackslash{}2}" and "\texttt{\textbackslash{}1}".
+In the ``to" part we have ``\texttt{\textbackslash{}2}" and ``\texttt{\textbackslash{}1}".
 These are called backreferences.
-They refer to the text matched by the "\texttt{\textbackslash{}( \textbackslash{})}" parts in the pattern.
-"\texttt{\textbackslash{}2}" refers to the text matched by the second "\texttt{\textbackslash{}( \textbackslash{})}", which is the "First" name.
-"\texttt{\textbackslash{}1}" refers to the first "\texttt{\textbackslash{}( \textbackslash{})}", which is the "Last" name.
+They refer to the text matched by the ``\texttt{\textbackslash{}( \textbackslash{})}" parts in the pattern.
+``\texttt{\textbackslash{}2}" refers to the text matched by the second ``\texttt{\textbackslash{}( \textbackslash{})}", which is the ``First" name.
+``\texttt{\textbackslash{}1}" refers to the first ``\texttt{\textbackslash{}( \textbackslash{})}", which is the ``Last" name.
 
-You can use up to nine backreferences in the "\texttt{to}" part of a substitute command.
-"\texttt{\textbackslash{}0}" stands for the whole matched pattern.
+You can use up to nine backreferences in the ``\texttt{to}" part of a substitute command.
+``\texttt{\textbackslash{}0}" stands for the whole matched pattern.
 There are a few more special items in a substitute command, see |\texttt{:h sub-replace-special}|.
 \subsection{Sort a list}
 
@@ -153,9 +153,9 @@ To sort this list, filter the text through the external sort command:
  :.,/^$/-1!sort
 \end{Verbatim}
 
-This goes to the first line, where "\texttt{OBJS}" is the first thing in the line.
+This goes to the first line, where ``\texttt{OBJS}" is the first thing in the line.
 Then it goes one line down and filters the lines until the next empty line.
-You could also select the lines in Visual mode and then use "\texttt{!sort}".
+You could also select the lines in Visual mode and then use ``\texttt{!sort}".
 That's easier to type, but more work when there are many lines.
 
 The result is this:
@@ -174,10 +174,10 @@ The result is this:
 
 Notice that a backslash at the end of each line is used to indicate the line continues.
 After sorting, this is wrong!
-The "\texttt{backup.o}" line that was at the end didn't have a backslash.
+The ``\texttt{backup.o}" line that was at the end didn't have a backslash.
 Now that it sorts to another place, it must have a backslash.
 
-The simplest solution is to add the backslash with "\texttt{A \textbackslash{}<Esc>}".
+The simplest solution is to add the backslash with ``\texttt{A \textbackslash{}<Esc>}".
 You can keep the backslash in the last line, if you make sure an empty line comes after it.
 That way you don't have this problem again.
 \subsection{Reverse line order}
@@ -195,12 +195,12 @@ Abbreviated:
  :g/^/m 0
 \end{Verbatim}
 
-The "\texttt{\^{}}" regular expression matches the beginning of the line (even if the line is blank).
+The ``\texttt{\^{}}" regular expression matches the beginning of the line (even if the line is blank).
 The |\texttt{:h :move}| command moves the matching line to after the mythical zeroth line, so the current matching line becomes the first line of the file.
 As the |:global| command is not confused by the changing line numbering, |\texttt{:h :global}| proceeds to match all remaining lines of the file and puts each as the first.
 
 This also works on a range of lines.
-First move to above the first line and mark it with "\texttt{mt}".
+First move to above the first line and mark it with ``\texttt{mt}".
 Then move the cursor to the last line in the range and type:
 
 \begin{Verbatim}[samepage=true]
@@ -226,7 +226,7 @@ The output looks like this:
 
 You can see on which word you are (748), and the total number of words in the file (774).
 
-When the text is only part of a file, you could move to the start of the text, type "\texttt{g CTRL-G}", move to the end of the text, type "g CTRL-G" again, and then use your brain to compute the difference in the word position.
+When the text is only part of a file, you could move to the start of the text, type ``\texttt{g CTRL-G}", move to the end of the text, type ``g CTRL-G" again, and then use your brain to compute the difference in the word position.
 That's a good exercise, but there is an easier way.
 With Visual mode, select the text you want to count words in.
 Then type \texttt{g CTRL-G}.
@@ -246,9 +246,9 @@ Let's first use a simple way: Move the cursor to the word you want to find help 
  K
 \end{Verbatim}
 
-Vim will run the external "\texttt{man}" program on the word.
+Vim will run the external ``\texttt{man}" program on the word.
 If the man page is found, it is displayed.
-This uses the normal pager to scroll through the text (mostly the "\texttt{more}" program).
+This uses the normal pager to scroll through the text (mostly the ``\texttt{more}" program).
 When you get to the end pressing <Enter> will get you back into Vim.
 
 A disadvantage is that you can't see the man page and the text you are working on at the same time.
@@ -260,7 +260,7 @@ First, load the man filetype plugin:
 \end{Verbatim}
 
 Put this command in your vimrc file if you intend to do this often.
-Now you can use the "\texttt{:Man}" command to open a window on a man page:
+Now you can use the ``\texttt{:Man}" command to open a window on a man page:
 
 \begin{Verbatim}[samepage=true]
  :Man csh
@@ -271,14 +271,14 @@ This allows you to find the help you were looking for.
 Use \texttt{CTRL-W w} to jump to the window with the text you were working on.
 
 To find a man page in a specific section, put the section number first.
-For example, to look in section 3 for "\texttt{echo}":
+For example, to look in section 3 for ``\texttt{echo}":
 
 \begin{Verbatim}[samepage=true]
  :Man 3 echo
 \end{Verbatim}
 
-To jump to another man page, which is in the text with the typical form "\texttt{word(1)}", press CTRL-] on it.
-Further "\texttt{:Man}" commands will use the same window.
+To jump to another man page, which is in the text with the typical form ``\texttt{word(1)}", press CTRL-] on it.
+Further ``\texttt{:Man}" commands will use the same window.
 
 To display a man page for the word under the cursor, use this:
 
@@ -287,14 +287,14 @@ To display a man page for the word under the cursor, use this:
 \end{Verbatim}
 
 (If you redefined the <Leader>, use it instead of the backslash).
-For example, you want to know the return value of "\texttt{strstr()}" while editing
+For example, you want to know the return value of ``\texttt{strstr()}" while editing
 this line:
 
 \begin{Verbatim}[samepage=true]
     if ( strstr (input, "aap") == ) 
 \end{Verbatim}
 
-Move the cursor to somewhere on "\texttt{strstr}" and type "\texttt{\textbackslash{}K}".
+Move the cursor to somewhere on ``\texttt{strstr}" and type ``\texttt{\textbackslash{}K}".
 A window will open to display the man page for strstr().
 \subsection{Trim blanks}
 Some people find spaces and tabs at the end of a line useless, wasteful, and ugly.
@@ -304,12 +304,12 @@ To remove whitespace at the end of every line, execute the following command:
  :%s/\s\+$//
 \end{Verbatim}
 
-The line range "\texttt{\%}" is used, thus this works on the whole file.
-The pattern that the "\texttt{:substitute}" command matches with is "\texttt{\textbackslash{}s\textbackslash{}+\$}".
+The line range ``\texttt{\%}" is used, thus this works on the whole file.
+The pattern that the ``\texttt{:substitute}" command matches with is ``\texttt{\textbackslash{}s\textbackslash{}+\$}".
 This finds white space characters (\texttt{\textbackslash{}s}), 1 or more of them (\texttt{\textbackslash{}+}), before the end-of-line (\texttt{\$}).
 Later will be explained how you write patterns like this |\hyperref[Search commands and patterns]{\texttt{Search commands and patterns}}|.
 
-The "to" part of the substitute command is empty: "\texttt{//}".
+The ``to" part of the substitute command is empty: ``\texttt{//}".
 Thus it replaces with nothing, effectively deleting the matched white space.
 
 Another wasteful use of spaces is placing them before a tab.
@@ -322,16 +322,16 @@ Use this search command:
 \end{Verbatim}
 
 You cannot see it, but there is a space before a tab in this command.
-Thus it's "\texttt{/<Space><Tab>}".
-Now use "\texttt{x}" to delete the space and check that the amount of white space doesn't change.
+Thus it's ``\texttt{/<Space><Tab>}".
+Now use ``\texttt{x}" to delete the space and check that the amount of white space doesn't change.
 You might have to insert a tab if it does change.
-Type "\texttt{n}" to find the next match.
+Type ``\texttt{n}" to find the next match.
 Repeat this until no more matches can be found.
 \subsection{Find where a word is used}
 If you are a UNIX user, you can use a combination of Vim and the grep command to edit all the files that contain a given word.
 This is extremely useful if you are working on a program and want to view or edit all the files that contain a specific variable.
 
-For example, suppose you want to edit all the C program files that contain the word "\texttt{frame\_counter}".
+For example, suppose you want to edit all the C program files that contain the word ``\texttt{frame\_counter}".
 To do this you use the command:
 
 \begin{Verbatim}[samepage=true]
@@ -341,7 +341,7 @@ To do this you use the command:
 Let's look at this command in detail.
 The grep command searches through a set of files for a given word.
 Because the -l argument is specified, the command will only list the files containing the word and not print the matching lines.
-The word it is searching for is "\texttt{frame\_counter}".
+The word it is searching for is ``\texttt{frame\_counter}".
 Actually, this can be any regular expression.
 (Note: What grep uses for regular expressions is not exactly the same as what Vim uses.)
 
@@ -349,25 +349,25 @@ The entire command is enclosed in backticks (\texttt{`}).
 This tells the UNIX shell to run this command and pretend that the results were typed on the command line.
 So what happens is that the grep command is run and produces a list of files, these files are put on the Vim command line.
 This results in Vim editing the file list that is the output of grep.
-You can then use commands like ":next" and ":first" to browse through the files.
+You can then use commands like ``:next" and ``:first" to browse through the files.
 
 \subsubsection{Finding each line}
 The above command only finds the files in which the word is found.
 You still have to find the word within the files.
 
 Vim has a built-in command that you can use to search a set of files for a given string.
-If you want to find all occurrences of "\texttt{error\_string}" in all C program files, for example, enter the following command:
+If you want to find all occurrences of ``\texttt{error\_string}" in all C program files, for example, enter the following command:
 
 \begin{Verbatim}[samepage=true]
  :grep error_string *.c
 \end{Verbatim}
 
-This causes Vim to search for the string "\texttt{error\_string}" in all the specified files (\texttt{*.c}).
+This causes Vim to search for the string ``\texttt{error\_string}" in all the specified files (\texttt{*.c}).
 The editor will now open the first file where a match is found and position the cursor on the first matching line.
-To go to the next matching line (no matter in what file it is), use the "\texttt{:cnext}" command.
-To go to the previous match, use the "\texttt{:cprev}" command.
-Use "\texttt{:clist}" to see all the matches and where they are.
+To go to the next matching line (no matter in what file it is), use the ``\texttt{:cnext}" command.
+To go to the previous match, use the ``\texttt{:cprev}" command.
+Use ``\texttt{:clist}" to see all the matches and where they are.
 
-The "\texttt{:grep}" command uses the external commands grep (on Unix) or findstr (on Windows).
+The ``\texttt{:grep}" command uses the external commands grep (on Unix) or findstr (on Windows).
 You can change this by setting the option \texttt{'grepprg'}.
 \clearpage
