--- a/src/usr_27.tex
+++ b/src/usr_27.tex
@@ -10,7 +10,7 @@ A detailed specification can be found here: |\texttt{:h pattern}|
 \localtableofcontents
 \subsection{Ignoring case}
 By default, Vim's searches are case sensitive.
-Therefore, "include", "INCLUDE", and "Include" are three different words and a search will match only one of them.
+Therefore, ``include", ``INCLUDE", and ``Include" are three different words and a search will match only one of them.
 
 Now switch on the \texttt{'ignorecase'} option:
 
@@ -18,7 +18,7 @@ Now switch on the \texttt{'ignorecase'} option:
  :set ignorecase
 \end{Verbatim}
 
-Search for "include" again, and now it will match "Include", "INCLUDE" and "InClUDe".
+Search for ``include" again, and now it will match ``Include", ``INCLUDE" and ``InClUDe".
 (Set the \texttt{'hlsearch'} option to quickly see where a pattern matches.)
 
 You can switch this off again with:
@@ -27,8 +27,8 @@ You can switch this off again with:
  :set noignorecase
 \end{Verbatim}
 
-But let's keep it set, and search for "INCLUDE".
-It will match exactly the same text as "include" did.
+But let's keep it set, and search for ``INCLUDE".
+It will match exactly the same text as ``include" did.
 Now set the \texttt{'smartcase'} option:
 
 \begin{Verbatim}[samepage=true]
@@ -50,9 +50,9 @@ With these two options set you find the following matches:
 \end{tabular} \end{center}
 
 \subsubsection{Case in one pattern}
-If you want to ignore case for one specific pattern, you can do this by prepending the "\texttt{\textbackslash{}c}" string.
-Using "\texttt{\textbackslash{}C}" will make the pattern to match case.
-This overrules the \texttt{'ignorecase'} and \texttt{'smartcase'} options, when "\texttt{\textbackslash{}c}" or "\texttt{\textbackslash{}C}" is used their value doesn't matter.
+If you want to ignore case for one specific pattern, you can do this by prepending the ``\texttt{\textbackslash{}c}" string.
+Using ``\texttt{\textbackslash{}C}" will make the pattern to match case.
+This overrules the \texttt{'ignorecase'} and \texttt{'smartcase'} options, when ``\texttt{\textbackslash{}c}" or ``\texttt{\textbackslash{}C}" is used their value doesn't matter.
 
 \begin{center} \begin{tabular}{l l}
 				pattern & matches \\
@@ -62,10 +62,10 @@ This overrules the \texttt{'ignorecase'} and \texttt{'smartcase'} options, when 
 				\texttt{\textbackslash{}cWord} & word, Word, WORD, WoRd, etc.\\
 \end{tabular} \end{center}
 
-A big advantage of using "\texttt{\textbackslash{}c}" and "\texttt{\textbackslash{}C}" is that it sticks with the pattern.
+A big advantage of using ``\texttt{\textbackslash{}c}" and ``\texttt{\textbackslash{}C}" is that it sticks with the pattern.
 Thus if you repeat a pattern from the search history, the same will happen, no matter if \texttt{'ignorecase'} or \texttt{'smartcase'} was changed.
 
-\emph{Note}: The use of "\texttt{\textbackslash{}}" items in search patterns depends on the \texttt{'magic'} option.
+\emph{Note}: The use of ``\texttt{\textbackslash{}}" items in search patterns depends on the \texttt{'magic'} option.
 In this chapter we will assume \texttt{'magic'} is on, because that is the standard and recommended setting.
 If you would change \texttt{'magic',} many search patterns would suddenly become invalid.
 
@@ -75,14 +75,14 @@ By default, a forward search starts searching for the given string at the curren
 It then proceeds to the end of the file.
 If it has not found the string by that time, it starts from the beginning and searches from the start of the file to the cursor location.
 
-Keep in mind that when repeating the "\texttt{n}" command to search for the next match, you eventually get back to the first match.
+Keep in mind that when repeating the ``\texttt{n}" command to search for the next match, you eventually get back to the first match.
 If you don't notice this you keep searching forever!  To give you a hint, Vim displays this message:
 
 \begin{Verbatim}[samepage=true]
     search hit BOTTOM, continuing at TOP 
 \end{Verbatim}
 
-If you use the "\texttt{?}" command, to search in the other direction, you get this message:
+If you use the ``\texttt{?}" command, to search in the other direction, you get this message:
 
 \begin{Verbatim}[samepage=true]
     search hit TOP, continuing at BOTTOM 
@@ -117,9 +117,9 @@ Now when the search hits the end of the file, an error message displays:
     E385: search hit BOTTOM without match for: forever 
 \end{Verbatim}
 
-Thus you can find all matches by going to the start of the file with "\texttt{gg}" and keep searching until you see this message.
+Thus you can find all matches by going to the start of the file with ``\texttt{gg}" and keep searching until you see this message.
 
-If you search in the other direction, using "\texttt{?}", you get:
+If you search in the other direction, using ``\texttt{?}", you get:
 
 \begin{Verbatim}[samepage=true]
     E384: search hit TOP without match for: forever 
@@ -127,22 +127,22 @@ If you search in the other direction, using "\texttt{?}", you get:
 \subsection{Offsets}
 By default, the search command leaves the cursor positioned on the beginning of the pattern.
 You can tell Vim to leave it some other place by specifying an offset.
-For the forward search command "\texttt{/}", the offset is specified by appending a slash (\texttt{/}) and the offset:
+For the forward search command ``\texttt{/}", the offset is specified by appending a slash (\texttt{/}) and the offset:
 
 \begin{Verbatim}[samepage=true]
  /default/2
 \end{Verbatim}
 
-This command searches for the pattern "default" and then moves to the beginning of the second line past the pattern.
-Using this command on the paragraph above, Vim finds the word "default" in the first line.
-Then the cursor is moved two lines down and lands on "an offset".
+This command searches for the pattern ``default" and then moves to the beginning of the second line past the pattern.
+Using this command on the paragraph above, Vim finds the word ``default" in the first line.
+Then the cursor is moved two lines down and lands on ``an offset".
 
 If the offset is a simple number, the cursor will be placed at the beginning of the line that many lines from the match.
 The offset number can be positive or negative.
 If it is positive, the cursor moves down that many lines; if negative, it moves up.
 
 \subsubsection{Character offsets}
-The "\texttt{e}" offset indicates an offset from the end of the match.
+The ``\texttt{e}" offset indicates an offset from the end of the match.
 It moves the cursor onto the last character of the match.
 The command:
 
@@ -150,7 +150,7 @@ The command:
  /const/e
 \end{Verbatim}
 
-puts the cursor on the "\texttt{t}" of "\texttt{const}".
+puts the cursor on the ``\texttt{t}" of ``\texttt{const}".
 
 From that position, adding a number moves forward that many characters.
 This command moves to the character just after the match:
@@ -166,10 +166,10 @@ For example:
  /const/e-1
 \end{Verbatim}
 
-moves the cursor to the "\texttt{s}" of "\texttt{const}".
+moves the cursor to the ``\texttt{s}" of ``\texttt{const}".
 
-If the offset begins with "\texttt{b}", the cursor moves to the beginning of the pattern.
-That's not very useful, since leaving out the "\texttt{b}" does the same thing.
+If the offset begins with ``\texttt{b}", the cursor moves to the beginning of the pattern.
+That's not very useful, since leaving out the ``\texttt{b}" does the same thing.
 It does get useful when a number is added or subtracted.
 The cursor then goes forward or backward that many characters.
 For example:
@@ -179,7 +179,7 @@ For example:
 \end{Verbatim}
 
 Moves the cursor to the beginning of the match and then two characters to the right.
-Thus it lands on the "\texttt{n}".
+Thus it lands on the ``\texttt{n}".
 
 \subsubsection{Repeating}
 To repeat searching for the previously used search pattern, but with a different offset, leave out the pattern:
@@ -201,7 +201,7 @@ To repeat with the same offset:
  /
 \end{Verbatim}
 
-"\texttt{n}" does the same thing.
+``\texttt{n}" does the same thing.
 To repeat while removing a previously used offset:
 
 \begin{Verbatim}[samepage=true]
@@ -209,13 +209,13 @@ To repeat while removing a previously used offset:
 \end{Verbatim}
 
 \subsubsection{Searching backwards}
-The "\texttt{?}" command uses offsets in the same way, but you must use "\texttt{?}" to separate the offset from the pattern, instead of "\texttt{/}":
+The ``\texttt{?}" command uses offsets in the same way, but you must use ``\texttt{?}" to separate the offset from the pattern, instead of ``\texttt{/}":
 
 \begin{Verbatim}[samepage=true]
  ?const?e-2
 \end{Verbatim}
 
-The "\texttt{b}" and "\texttt{e}" keep their meaning, they don't change direction with the use of "\texttt{?}".
+The ``\texttt{b}" and ``\texttt{e}" keep their meaning, they don't change direction with the use of ``\texttt{?}".
 \subsubsection{Start position}
 When starting a search, it normally starts at the cursor position.
 When you specify a line offset, this can cause trouble.
@@ -225,73 +225,73 @@ For example:
  /const/-2
 \end{Verbatim}
 
-This finds the next word "\texttt{const}" and then moves two lines up.
-If you use "\texttt{n}" to search again, Vim could start at the current position and find the same "\texttt{const}" match.
+This finds the next word ``\texttt{const}" and then moves two lines up.
+If you use ``\texttt{n}" to search again, Vim could start at the current position and find the same ``\texttt{const}" match.
 Then using the offset again, you would be back where you started.
 You would be stuck!
 
-It could be worse: Suppose there is another match with "\texttt{const}" in the next line.
+It could be worse: Suppose there is another match with ``\texttt{const}" in the next line.
 Then repeating the forward search would find this match and move two lines up.
 Thus you would actually move the cursor back!
 
 When you specify a character offset, Vim will compensate for this.
 Thus the search starts a few characters forward or backward, so that the same match isn't found again.
 \subsection{Matching multiple times}
-The "\texttt{*}" item specifies that the item before it can match any number of times.
+The ``\texttt{*}" item specifies that the item before it can match any number of times.
 Thus:
 
 \begin{Verbatim}[samepage=true]
  /a*
 \end{Verbatim}
 
-matches "a", "aa", "aaa", etc.
-But also "" (the empty string), because zero times is included.
+matches ``a", ``aa", ``aaa", etc.
+But also ``" (the empty string), because zero times is included.
 
-The "\texttt{*}" only applies to the item directly before it.
-Thus "\texttt{ab*}" matches "a", "ab", "abb", "abbb", etc.
+The ``\texttt{*}" only applies to the item directly before it.
+Thus ``\texttt{ab*}" matches ``a", ``ab", ``abb", ``abbb", etc.
 To match a whole string multiple times, it must be grouped into one item.
-This is done by putting "\texttt{\textbackslash{}(}" before it and "\texttt{\textbackslash{})}" after it.
+This is done by putting ``\texttt{\textbackslash{}(}" before it and ``\texttt{\textbackslash{})}" after it.
 Thus this command:
 
 \begin{Verbatim}[samepage=true]
  /\(ab\)*
 \end{Verbatim}
 
-Matches: "ab", "abab", "ababab", etc.  And also "".
+Matches: ``ab", ``abab", ``ababab", etc.  And also ``".
 
-To avoid matching the empty string, use "\texttt{\textbackslash{}+}".
+To avoid matching the empty string, use ``\texttt{\textbackslash{}+}".
 This makes the previous item match one or more times.
 
 \begin{Verbatim}[samepage=true]
  /ab\+
 \end{Verbatim}
 
-Matches "ab", "abb", "abbb", etc.
-It does not match "a" when no "b" follows.
+Matches ``ab", ``abb", ``abbb", etc.
+It does not match ``a" when no ``b" follows.
 
-To match an optional item, use "\texttt{\textbackslash{}=}".
+To match an optional item, use ``\texttt{\textbackslash{}=}".
 Example:
 
 \begin{Verbatim}[samepage=true]
  /folders\=
 \end{Verbatim}
 
-Matches "folder" and "folders".
+Matches ``folder" and ``folders".
 \subsubsection{Specific counts}
-To match a specific number of items use the form "\texttt{\textbackslash{}{n,m}}".
-"\texttt{n}" and "\texttt{m}" are numbers.
-The item before it will be matched "\texttt{n}" to "\texttt{m}" times |\texttt{:h inclusive}|.
+To match a specific number of items use the form ``\texttt{\textbackslash{}{n,m}}".
+``\texttt{n}" and ``\texttt{m}" are numbers.
+The item before it will be matched ``\texttt{n}" to ``\texttt{m}" times |\texttt{:h inclusive}|.
 Example:
 
 \begin{Verbatim}[samepage=true]
  /ab\{3,5}
 \end{Verbatim}
 
-matches "abbb", "abbbb" and "abbbbb".
+matches ``abbb", ``abbbb" and ``abbbbb".
 
-When "\texttt{n}" is omitted, it defaults to zero.
-When "\texttt{m}" is omitted it defaults to infinity.
-When "\texttt{,m}" is omitted, it matches exactly "\texttt{n}" times.
+When ``\texttt{n}" is omitted, it defaults to zero.
+When ``\texttt{m}" is omitted it defaults to infinity.
+When ``\texttt{,m}" is omitted, it matches exactly ``\texttt{n}" times.
 Examples:
 
 \begin{center} \begin{tabular}{l l}
@@ -305,8 +305,8 @@ Examples:
 \end{tabular} \end{center}
 \subsubsection{Matching as little as possible}
 The items so far match as many characters as they can find.
-To match as few as possible, use "\texttt{\textbackslash{}{-n,m}}".
-It works the same as "\texttt{\textbackslash{}{n,m}}", except that the minimal amount possible is used.
+To match as few as possible, use ``\texttt{\textbackslash{}{-n,m}}".
+It works the same as ``\texttt{\textbackslash{}{n,m}}", except that the minimal amount possible is used.
 
 For example, use:
 
@@ -314,12 +314,12 @@ For example, use:
  /ab\{-1,3}
 \end{Verbatim}
 
-Will match "ab" in "abbb".
+Will match ``ab" in ``abbb".
 Actually, it will never match more than one b, because there is no reason to match more.
 It requires something else to force it to match more than the lower limit.
 
-The same rules apply to removing "\texttt{n}" and "\texttt{m}".
-It's even possible to remove both of the numbers, resulting in "\texttt{\textbackslash{}{-}}".
+The same rules apply to removing ``\texttt{n}" and ``\texttt{m}".
+It's even possible to remove both of the numbers, resulting in ``\texttt{\textbackslash{}{-}}".
 This matches the item before it zero or more times, as few as possible.
 The item by itself always matches zero times.
 It is useful when combined with something else.
@@ -329,38 +329,38 @@ Example:
  /a.\{-}b
 \end{Verbatim}
 
-This matches "axb" in "axbxb".
+This matches ``axb" in ``axbxb".
 If this pattern would be used:
 
 \begin{Verbatim}[samepage=true]
  /a.*b
 \end{Verbatim}
 
-It would try to match as many characters as possible with "\texttt{.*}", thus it matches "axbxb" as a whole.
+It would try to match as many characters as possible with ``\texttt{.*}", thus it matches ``axbxb" as a whole.
 \subsection{Alternatives}
-The "or" operator in a pattern is "\texttt{\textbackslash{}|}".
+The ``or" operator in a pattern is ``\texttt{\textbackslash{}|}".
 Example:
 
 \begin{Verbatim}[samepage=true]
  /foo\|bar
 \end{Verbatim}
 
-This matches "foo" or "bar".
+This matches ``foo" or ``bar".
 More alternatives can be concatenated:
 
 \begin{Verbatim}[samepage=true]
  /one\|two\|three
 \end{Verbatim}
 
-Matches "one", "two" and "three".
+Matches ``one", ``two" and ``three".
 
-To match multiple times, the whole thing must be placed in "\texttt{\textbackslash{}(}" and "\texttt{\textbackslash{})}":
+To match multiple times, the whole thing must be placed in ``\texttt{\textbackslash{}(}" and ``\texttt{\textbackslash{})}":
 
 \begin{Verbatim}[samepage=true]
  /\(foo\|bar\)\+
 \end{Verbatim}
 
-This matches "foo", "foobar", "foofoo", "barfoobar", etc.
+This matches ``foo", ``foobar", ``foofoo", ``barfoobar", etc.
 
 Another example:
 
@@ -368,9 +368,9 @@ Another example:
  /end\(if\|while\|for\)
 \end{Verbatim}
 
-This matches "endif", "endwhile" and "endfor".
+This matches ``endif", ``endwhile" and ``endfor".
 
-A related item is "\texttt{\textbackslash{}\&}".
+A related item is ``\texttt{\textbackslash{}\&}".
 This requires that both alternatives match in the same place.
 The resulting match uses the last alternative.
 Example:
@@ -379,10 +379,10 @@ Example:
  /forever\&...
 \end{Verbatim}
 
-This matches "for" in "forever".  It will not match "fortuin", for example.
+This matches ``for" in ``forever".  It will not match ``fortuin", for example.
 \subsection{Character ranges}
-To match "a", "b" or "c" you could use "\texttt{/a\textbackslash{}|b\textbackslash{}|c}".
-When you want to match all letters from "a" to "z" this gets very long.
+To match ``a", ``b" or ``c" you could use ``\texttt{/a\textbackslash{}|b\textbackslash{}|c}".
+When you want to match all letters from ``a" to ``z" this gets very long.
 There is a shorter method:
 
 \begin{Verbatim}[samepage=true]
@@ -399,15 +399,15 @@ You can include a list of characters, like this:
 
 This will match any of the characters included.
 For consecutive characters you can specify the range.
-"\texttt{0-3}" stands for "\texttt{0123}".
-"\texttt{w-z}" stands for "\texttt{wxyz}".
+``\texttt{0-3}" stands for ``\texttt{0123}".
+``\texttt{w-z}" stands for ``\texttt{wxyz}".
 Thus the same command as above can be shortened to:
 
 \begin{Verbatim}[samepage=true]
  /[0-9a-f]
 \end{Verbatim}
 
-To match the "\texttt{-}" character itself make it the first or last one in the range.
+To match the ``\texttt{-}" character itself make it the first or last one in the range.
 These special characters are accepted to make it easier to use them inside a \texttt{[]} range (they can actually be used anywhere in the search pattern):
 
 \begin{center} \begin{tabular}{l l}
@@ -419,7 +419,7 @@ These special characters are accepted to make it easier to use them inside a \te
 
 There are a few more special cases for \texttt{[]} ranges, see |\texttt{:h /[]}| for the whole story.
 \subsubsection{Complemented range}
-To avoid matching a specific character, use "\texttt{\^{}}" at the start of the range.
+To avoid matching a specific character, use ``\texttt{\^{}}" at the start of the range.
 The [] item then matches everything but the characters included.
 Example:
 
@@ -434,7 +434,7 @@ Example:
 				\texttt{      "} & a double quote again \\
 \end{tabular} \end{center}
 
-This matches "foo" and "3!x", including the double quotes.
+This matches ``foo" and ``3!x", including the double quotes.
 \subsubsection{Predefined ranges}
 A number of ranges are used very often.
 Vim provides a shortcut for these.
@@ -445,7 +445,7 @@ For example:
 \end{Verbatim}
 
 Finds alphabetic characters.
-This is equal to using "\texttt{/[a-zA-Z]}".
+This is equal to using ``\texttt{/[a-zA-Z]}".
 Here are a few more of these:
 
 \begin{center} \begin{tabular}{l l l}
@@ -465,8 +465,8 @@ Here are a few more of these:
 \emph{Note}:
 Using these predefined ranges works a lot faster than the character range it stands for.
 These items can not be used inside \texttt{[]}.
-Thus "\texttt{[\textbackslash{}d\textbackslash{}l]}" does NOT work to match a digit or lowercase alpha.
-Use "\texttt{\textbackslash{}(\textbackslash{}d\textbackslash{}|\textbackslash{}l\textbackslash{})}" instead.
+Thus ``\texttt{[\textbackslash{}d\textbackslash{}l]}" does NOT work to match a digit or lowercase alpha.
+Use ``\texttt{\textbackslash{}(\textbackslash{}d\textbackslash{}|\textbackslash{}l\textbackslash{})}" instead.
 
 See |\texttt{:h /\textbackslash{}s}| for the whole list of these ranges.
 \subsection{Character classes}
@@ -479,7 +479,7 @@ For example, search for this pattern:
  /\f\+
 \end{Verbatim}
 
-The "\texttt{\textbackslash{}f}" items stands for file name characters.
+The ``\texttt{\textbackslash{}f}" items stands for file name characters.
 Thus this matches a sequence of characters that can be a file name.
 
 Which characters can be part of a file name depends on the system you are using.
@@ -493,7 +493,7 @@ The default value for Unix is:
 \end{Verbatim}
 
 For other systems the default value is different.
-Thus you can make a search pattern with "\texttt{\textbackslash{}f}" to match a file name, and it will automatically adjust to the system you are using it on.
+Thus you can make a search pattern with ``\texttt{\textbackslash{}f}" to match a file name, and it will automatically adjust to the system you are using it on.
 
 \emph{Note}: Actually, Unix allows using just about any character in a file name, including white space.
 Including these characters in \texttt{'isfname'} would be theoretically correct.
@@ -517,15 +517,15 @@ The character classes are:
 Vim can find a pattern that includes a line break.
 You need to specify where the line break happens, because all items mentioned so far don't match a line break.
 
-To check for a line break in a specific place, use the "\texttt{\textbackslash{}n}" item:
+To check for a line break in a specific place, use the ``\texttt{\textbackslash{}n}" item:
 
 \begin{Verbatim}[samepage=true]
  /the\nword
 \end{Verbatim}
 
-This will match at a line that ends in "the" and the next line starts with "word".
-To match "the word" as well, you need to match a space or a line break.
-The item to use for it is "\texttt{\textbackslash{}\_s}":
+This will match at a line that ends in ``the" and the next line starts with ``word".
+To match ``the word" as well, you need to match a space or a line break.
+The item to use for it is ``\texttt{\textbackslash{}\_s}":
 
 \begin{Verbatim}[samepage=true]
  /the\_sword
@@ -537,19 +537,19 @@ To allow any amount of white space:
  /the\_s\+word
 \end{Verbatim}
 
-This also matches when "the  " is at the end of a line and "\texttt{   word}" at the start of the next one.
+This also matches when ``the  " is at the end of a line and ``\texttt{   word}" at the start of the next one.
 
-"\texttt{\textbackslash{}s}" matches white space, "\texttt{\textbackslash{}\_s}" matches white space or a line break.
-Similarly, "\texttt{\textbackslash{}a}" matches an alphabetic character, and "\texttt{\textbackslash{}\_a}" matches an alphabetic character or a line break.
-The other character classes and ranges can be modified in the same way by inserting a "\texttt{\_}".
+``\texttt{\textbackslash{}s}" matches white space, ``\texttt{\textbackslash{}\_s}" matches white space or a line break.
+Similarly, ``\texttt{\textbackslash{}a}" matches an alphabetic character, and ``\texttt{\textbackslash{}\_a}" matches an alphabetic character or a line break.
+The other character classes and ranges can be modified in the same way by inserting a ``\texttt{\_}".
 
-Many other items can be made to match a line break by prepending "\texttt{\textbackslash{}\_}".
-For example: "\texttt{\textbackslash{}\_.}" matches any character or a line break.
+Many other items can be made to match a line break by prepending ``\texttt{\textbackslash{}\_}".
+For example: ``\texttt{\textbackslash{}\_.}" matches any character or a line break.
 
-\emph{Note}: "\texttt{\textbackslash{}\_.*}" matches everything until the end of the file.
+\emph{Note}: ``\texttt{\textbackslash{}\_.*}" matches everything until the end of the file.
 Be careful with this, it can make a search command very slow.
 
-Another example is "\texttt{\textbackslash{}\_[]}", a character range that includes a line break:
+Another example is ``\texttt{\textbackslash{}\_[]}", a character range that includes a line break:
 
 \begin{Verbatim}[samepage=true]
  /"\_[^"]*"
@@ -561,7 +561,7 @@ Here are a few search patterns you might find useful.
 This shows how the items mentioned above can be combined.
 
 \subsubsection{Finding a california license plate}
-A sample license plate number is "1MGU103".
+A sample license plate number is ``1MGU103".
 It has one digit, three uppercase letters and three digits.
 Directly putting this into a search pattern:
 
@@ -594,18 +594,18 @@ This can be found with:
  /\<\h\w*\>
 \end{Verbatim}
 
-"\texttt{\textbackslash{}<}" and "\texttt{\textbackslash{}>}" are used to find only whole words.
-"\texttt{\textbackslash{}h}" stands for "\texttt{[A-Za-z\_]}" and "\texttt{\textbackslash{}w}" for "\texttt{[0-9A-Za-z\_]}".
+``\texttt{\textbackslash{}<}" and ``\texttt{\textbackslash{}>}" are used to find only whole words.
+``\texttt{\textbackslash{}h}" stands for ``\texttt{[A-Za-z\_]}" and ``\texttt{\textbackslash{}w}" for ``\texttt{[0-9A-Za-z\_]}".
 
 \emph{Note}:
-"\texttt{\textbackslash{}<}" and "\texttt{\textbackslash{}>}" depend on the \texttt{'iskeyword'} option.
-If it includes "\texttt{-}", for example, then "ident-" is not matched.
+``\texttt{\textbackslash{}<}" and ``\texttt{\textbackslash{}>}" depend on the \texttt{'iskeyword'} option.
+If it includes ``\texttt{-}", for example, then ``ident-" is not matched.
 In this situation use:
 
 \begin{Verbatim}[samepage=true]
      /\w\@<!\h\w*\w\@!
 \end{Verbatim}
  
-This checks if "\texttt{\textbackslash{}w}" does not match before or after the identifier.
+This checks if ``\texttt{\textbackslash{}w}" does not match before or after the identifier.
 See |\texttt{:h /\textbackslash{}@<!}| and |\texttt{:h /\textbackslash{}@}!|.
 \clearpage
