--- a/src/usr_40.tex
+++ b/src/usr_40.tex
@@ -22,17 +22,17 @@ Example:
 \end{Verbatim}
 
 This shows how three modes are used.
-After going to the last line with "\texttt{G}", the "\texttt{o}" command opens a new line and starts Insert mode.
-The text "\texttt{Date: }" is inserted and <Esc> takes you out of insert mode.
+After going to the last line with ``\texttt{G}", the ``\texttt{o}" command opens a new line and starts Insert mode.
+The text ``\texttt{Date: }" is inserted and <Esc> takes you out of insert mode.
 
 Notice the use of special keys inside <>.
 This is called angle bracket notation.
 You type these as separate characters, not by pressing the key itself.
 This makes the mappings better readable and you can copy and paste the text without problems.
 
-The "\texttt{:}" character takes Vim to the command line.
-The "\texttt{:read !date}" command reads the output from the "\texttt{date}" command and appends it below the current line.
-The <CR> is required to execute the "\texttt{:read}" command.
+The ``\texttt{:}" character takes Vim to the command line.
+The ``\texttt{:read !date}" command reads the output from the ``\texttt{date}" command and appends it below the current line.
+The <CR> is required to execute the ``\texttt{:read}" command.
 
 At this point of execution the text looks like this:
 
@@ -41,14 +41,14 @@ At this point of execution the text looks like this:
     Fri Jun 15 12:54:34 CEST 2001 
 \end{Verbatim}
 
-Now "\texttt{kJ}" moves the cursor up and joins the lines together.
+Now ``\texttt{kJ}" moves the cursor up and joins the lines together.
 
 To decide which key or keys you use for mapping, see |\texttt{:h map-which-keys}|.
 
 \subsubsection{Mapping and modes}
-The "\texttt{:map}" command defines remapping for keys in Normal mode.
+The ``\texttt{:map}" command defines remapping for keys in Normal mode.
 You can also define mappings for other modes.
-For example, "\texttt{:imap}" applies to Insert mode.
+For example, ``\texttt{:imap}" applies to Insert mode.
 You can use it to insert a date below the cursor:
 
 \begin{Verbatim}[samepage=true]
@@ -60,7 +60,7 @@ The <F2> mapping for Normal mode is still there.
 Thus you can map the same key differently for each mode.
 
 Notice that, although this mapping starts in Insert mode, it ends in Normal mode.
-If you want it to continue in Insert mode, append an "\texttt{a}" to the mapping.
+If you want it to continue in Insert mode, append an ``\texttt{a}" to the mapping.
 
 Here is an overview of map commands and in which mode they work:
 \begin{center} \begin{tabular}{l l}
@@ -73,8 +73,8 @@ Here is an overview of map commands and in which mode they work:
 				\texttt{:cmap} & Command-line \\
 \end{tabular} \end{center}
 
-Operator-pending mode is when you typed an operator character, such as "\texttt{d}" or "\texttt{y}", and you are expected to type the motion command or a text object.
-Thus when you type "\texttt{dw}", the "\texttt{w}" is entered in operator-pending mode.
+Operator-pending mode is when you typed an operator character, such as ``\texttt{d}" or ``\texttt{y}", and you are expected to type the motion command or a text object.
+Thus when you type ``\texttt{dw}", the ``\texttt{w}" is entered in operator-pending mode.
 
 Suppose that you want to define <F7> so that the command d<F7> deletes a C program block (text enclosed in curly braces, \texttt{\{\}}).
 Similarly y<F7> would yank the program block into the unnamed register.
@@ -85,10 +85,10 @@ You can do this with the following command:
  :omap <F7> a{
 \end{Verbatim}
 
-This causes <F7> to perform a select block "\texttt{a\{}" in operator-pending mode, just like you typed it.
+This causes <F7> to perform a select block ``\texttt{a\{}" in operator-pending mode, just like you typed it.
 This mapping is useful if typing a \texttt{\{} on your keyboard is a bit difficult.
 \subsubsection{Listing mappings}
-To see the currently defined mappings, use "\texttt{:map}" without arguments.
+To see the currently defined mappings, use ``\texttt{:map}" without arguments.
 Or one of the variants that include the mode in which they work.
 The output could look like this:
 
@@ -101,8 +101,8 @@ The output could look like this:
 \end{tabular} \end{center}
 
 The first column of the list shows in which mode the mapping is effective.
-This is "\texttt{n}" for Normal mode, "\texttt{i}" for Insert mode, etc.
-A blank is used for a mapping defined with "\texttt{:map}", thus effective in both Normal and Visual mode.
+This is ``\texttt{n}" for Normal mode, ``\texttt{i}" for Insert mode, etc.
+A blank is used for a mapping defined with ``\texttt{:map}", thus effective in both Normal and Visual mode.
 
 One useful purpose of listing the mapping is to check if special keys in <> form have been recognized (this only works when color is supported).
 For example, when <Esc> is displayed in color, it stands for the escape character.
@@ -122,7 +122,7 @@ For Normal mode <F2> is mapped to go to the last line, and then behave like <F3>
 In Insert mode <F2> stops Insert mode with <Esc> and then also uses <F3>.
 Then <F3> is mapped to do the actual work.
 
-Suppose you hardly ever use Ex mode, and want to use the "\texttt{Q}" command to format text (this was so in old versions of Vim).
+Suppose you hardly ever use Ex mode, and want to use the ``\texttt{Q}" command to format text (this was so in old versions of Vim).
 This mapping will do it:
 
 \begin{Verbatim}[samepage=true]
@@ -130,23 +130,23 @@ This mapping will do it:
 \end{Verbatim}
 
 But, in rare cases you need to use Ex mode anyway.
-Let's map "\texttt{gQ}" to Q, so that you can still go to Ex mode:
+Let's map ``\texttt{gQ}" to Q, so that you can still go to Ex mode:
 
 \begin{Verbatim}[samepage=true]
  :map gQ Q
 \end{Verbatim}
 
-What happens now is that when you type "\texttt{gQ}" it is mapped to "\texttt{Q}".
+What happens now is that when you type ``\texttt{gQ}" it is mapped to ``\texttt{Q}".
 So far so good.
-But then "\texttt{Q}" is mapped to "\texttt{gq}", thus typing "\texttt{gQ}" results in "\texttt{gq}", and you don't get to Ex mode at all.
+But then ``\texttt{Q}" is mapped to ``\texttt{gq}", thus typing ``\texttt{gQ}" results in ``\texttt{gq}", and you don't get to Ex mode at all.
 
-To avoid keys to be mapped again, use the "\texttt{:noremap}" command:
+To avoid keys to be mapped again, use the ``\texttt{:noremap}" command:
 
 \begin{Verbatim}[samepage=true]
  :noremap gQ Q
 \end{Verbatim}
 
-Now Vim knows that the "\texttt{Q}" is not to be inspected for mappings that apply to it.
+Now Vim knows that the ``\texttt{Q}" is not to be inspected for mappings that apply to it.
 There is a similar command for every mode:
 
 \begin{center} \begin{tabular}{l l}
@@ -163,7 +163,7 @@ When a mapping triggers itself, it will run forever.
 This can be used to repeat an action an unlimited number of times.
 
 For example, you have a list of files that contain a version number in the first line.
-You edit these files with "\texttt{vim *.txt}".
+You edit these files with ``\texttt{vim *.txt}".
 You are now editing the first file.
 Define this mapping:
 
@@ -171,22 +171,22 @@ Define this mapping:
  :map ,, :s/5.1/5.2/<CR>:wnext<CR>,,
 \end{Verbatim}
 
-Now you type "\texttt{,,}".
+Now you type ``\texttt{,,}".
 This triggers the mapping.
-It replaces "\texttt{5.1}" with "\texttt{5.2}" in the first line.
-Then it does a "\texttt{:wnext}" to write the file and edit the next one.
-The mapping ends in "\texttt{,,}".
+It replaces ``\texttt{5.1}" with ``\texttt{5.2}" in the first line.
+Then it does a ``\texttt{:wnext}" to write the file and edit the next one.
+The mapping ends in ``\texttt{,,}".
 This triggers the same mapping again, thus doing the substitution, etc.
 
 This continues until there is an error.
-In this case it could be a file where the substitute command doesn't find a match for "\texttt{5.1}".
-You can then make a change to insert "\texttt{5.1}" and continue by typing "\texttt{,,}" again.
-Or the "\texttt{:wnext}" fails, because you are in the last file in the list.
+In this case it could be a file where the substitute command doesn't find a match for ``\texttt{5.1}".
+You can then make a change to insert ``\texttt{5.1}" and continue by typing ``\texttt{,,}" again.
+Or the ``\texttt{:wnext}" fails, because you are in the last file in the list.
 
 When a mapping runs into an error halfway, the rest of the mapping is discarded.
 CTRL-C interrupts the mapping (CTRL-Break on MS-Windows).
 \subsubsection{Delete a mapping}
-To remove a mapping use the "\texttt{:unmap}" command.
+To remove a mapping use the ``\texttt{:unmap}" command.
 Again, the mode the unmapping applies to depends on the command used:
 
 \begin{center} \begin{tabular}{l l}
@@ -207,14 +207,14 @@ First define it for all three modes, then delete it for Visual mode:
  :vunmap <C-A>
 \end{Verbatim}
 
-Notice that the five characters "\texttt{<C-A>}" stand for the single key CTRL-A.
+Notice that the five characters ``\texttt{<C-A>}" stand for the single key CTRL-A.
 
 To remove all mappings use the |\texttt{:h :mapclear}| command.
 You can guess the variations for different modes by now.
 Be careful with this command, it can't be undone.
 
 \subsubsection{Special characters}
-The "\texttt{:map}" command can be followed by another command.
+The ``\texttt{:map}" command can be followed by another command.
 A \texttt{|} character separates the two commands.
 This also means that a \texttt{|} character can't be used inside a map command.
 To include one, use <Bar> (five characters).
@@ -224,7 +224,7 @@ Example:
  :map <F8> :write <Bar> !checkin %<CR>
 \end{Verbatim}
 
-The same problem applies to the "\texttt{:unmap}" command, with the addition that you have to watch out for trailing white space.
+The same problem applies to the ``\texttt{:unmap}" command, with the addition that you have to watch out for trailing white space.
 These two commands are different:
 
 \begin{Verbatim}[samepage=true]
@@ -232,7 +232,7 @@ These two commands are different:
  :unmap a| unmap b
 \end{Verbatim}
 
-The first command tries to unmap "\texttt{a }", with a trailing space.
+The first command tries to unmap ``\texttt{a }", with a trailing space.
 
 When using a space inside a mapping, use <Space> (seven characters):
 
@@ -242,7 +242,7 @@ When using a space inside a mapping, use <Space> (seven characters):
 
 This makes the spacebar move a blank-separated word forward.
 
-It is not possible to put a comment directly after a mapping, because the " character is considered to be part of the mapping.
+It is not possible to put a comment directly after a mapping, because the \texttt{"} character is considered to be part of the mapping.
 You can use \texttt{|"}, this starts a new, empty command with a comment.
 Example:
 
@@ -269,10 +269,10 @@ Suppose you have done two mappings:
  :imap aaa bar
 \end{Verbatim}
 
-Now, when you type "\texttt{aa}", Vim doesn't know if it should apply the first or the second mapping.
+Now, when you type ``\texttt{aa}", Vim doesn't know if it should apply the first or the second mapping.
 It waits for another character to be typed.
-If it is an "\texttt{a}", the second mapping is applied and results in "\texttt{bar}".
-If it is a space, for example, the first mapping is applied, resulting in "\texttt{foo}", and then the space is inserted.
+If it is an ``\texttt{a}", the second mapping is applied and results in ``\texttt{bar}".
+If it is a space, for example, the first mapping is applied, resulting in ``\texttt{foo}", and then the space is inserted.
 
 \subsubsection{Additionally...}
 The <script> keyword can be used to make a mapping local to a script.
@@ -297,16 +297,16 @@ There must be no space after <Nop>.
 The Vim editor enables you to define your own commands.
 You execute these commands just like any other Command-line mode command.
 
-To define a command, use the "\texttt{:command}" command, as follows:
+To define a command, use the ``\texttt{:command}" command, as follows:
 
 \begin{Verbatim}[samepage=true]
  :command DeleteFirst 1delete
 \end{Verbatim}
 
-Now when you execute the command "\texttt{:DeleteFirst}" Vim executes "\texttt{:1delete}", which deletes the first line.
+Now when you execute the command ``\texttt{:DeleteFirst}" Vim executes ``\texttt{:1delete}", which deletes the first line.
 
 \emph{Note}: User-defined commands must start with a capital letter.
-You cannot use "\texttt{:X}", "\texttt{:Next}" and "\texttt{:Print}".
+You cannot use ``\texttt{:X}", ``\texttt{:Next}" and ``\texttt{:Print}".
 The underscore cannot be used!  You can use digits, but this is discouraged.
 
 To list the user-defined commands, execute the following command:
@@ -328,7 +328,7 @@ For instance, the example \texttt{:DeleteFirst} command takes no arguments, so y
  :command -nargs=0 DeleteFirst 1delete
 \end{Verbatim}
 
-However, because zero arguments is the default, you do not need to add "\texttt{-nargs=0}".
+However, because zero arguments is the default, you do not need to add ``\texttt{-nargs=0}".
 The other values of \texttt{-nargs} are as follows:
 
 \begin{center} \begin{tabular}{c l}
@@ -353,7 +353,7 @@ Now when you type
  :Say Hello World
 \end{Verbatim}
 
-Vim echoes "Hello World".
+Vim echoes ``Hello World".
 However, if you add a double quote, it won't work.
 For example:
 
@@ -361,13 +361,13 @@ For example:
  :Say he said "hello"
 \end{Verbatim}
 
-To get special characters turned into a string, properly escaped to use as an expression, use "\texttt{<q-args>}":
+To get special characters turned into a string, properly escaped to use as an expression, use ``\texttt{<q-args>}":
 
 \begin{Verbatim}[samepage=true]
  :command -nargs=+ Say :echo <q-args>
 \end{Verbatim}
 
-Now the above "\texttt{:Say}" command will result in this to be executed:
+Now the above ``\texttt{:Say}" command will result in this to be executed:
 
 \begin{Verbatim}[samepage=true]
  :echo "he said \"hello\""
@@ -399,7 +399,7 @@ The values for this option are as follows:
 \end{tabularx} \end{center}
 
 When a range is specified, the keywords <line1> and <line2> get the values of the first and last line in the range.
-For example, the following command defines the SaveIt command, which writes out the specified range to the file "\texttt{save\_file}":
+For example, the following command defines the SaveIt command, which writes out the specified range to the file ``\texttt{save\_file}":
 
 \begin{Verbatim}[samepage=true]
  :command -range=% SaveIt :<line1>,<line2>write! save_file
@@ -428,7 +428,7 @@ To redefine the same command use the \texttt{!: argument}
  :command! -nargs=+ Say :echo <q-args>
 \end{Verbatim}
 
-To delete a user command use "\texttt{:delcommand}".
+To delete a user command use ``\texttt{:delcommand}".
 It takes a single argument, which is the name of the command.
 Example:
 
@@ -472,11 +472,11 @@ This will make that happen:
  :autocmd FileWritePre *  call DateInsert()
 \end{Verbatim}
 
-"\texttt{FileWritePre}" is the event for which this autocommand is triggered: Just before (pre) writing a file.
-The "\texttt{*}" is a pattern to match with the file name.
+``\texttt{FileWritePre}" is the event for which this autocommand is triggered: Just before (pre) writing a file.
+The ``\texttt{*}" is a pattern to match with the file name.
 In this case it matches all files.
 
-With this command enabled, when you do a "\texttt{:write}", Vim checks for any matching FileWritePre autocommands and executes them, and then it performs the "\texttt{:write}".
+With this command enabled, when you do a ``\texttt{:write}", Vim checks for any matching FileWritePre autocommands and executes them, and then it performs the ``\texttt{:write}".
 
 The general form of the \texttt{:autocmd} command is as follows:
 
@@ -488,14 +488,14 @@ The \texttt{[group]} name is optional.
 It is used in managing and calling the commands (more on this later).
 The \texttt{\{events\}} parameter is a list of events (comma separated) that trigger the command.
 \texttt{\{file\_pattern\}} is a filename, usually with wildcards.
-For example, using "\texttt{*.txt}" makes the autocommand be used for all files whose name end in "\texttt{.txt}".
+For example, using ``\texttt{*.txt}" makes the autocommand be used for all files whose name end in ``\texttt{.txt}".
 The optional \texttt{[nested]} flag allows for nesting of autocommands (see below), and finally, \texttt{\{command\}} is the command to be executed.
 
 \subsubsection{Events}
 One of the most useful events is \texttt{BufReadPost}.
 It is triggered after a new file is being edited.
 It is commonly used to set option values.
-For example, you know that "\texttt{*.gsm}" files are GNU assembly language.
+For example, you know that ``\texttt{*.gsm}" files are GNU assembly language.
 To get the syntax file right, define this autocommand:
 
 \begin{Verbatim}[samepage=true]
@@ -521,7 +521,7 @@ See |\texttt{:h autocmd-events}| for a complete list of events.
 
 \subsubsection{Patterns}
 The \texttt{\{file\_pattern\}} argument can actually be a comma-separated list of file patterns.
-For example: "\texttt{*.c,*.h}" matches files ending in "\texttt{.c}" and "\texttt{.h}".
+For example: ``\texttt{*.c,*.h}" matches files ending in ``\texttt{.c}" and ``\texttt{.h}".
 
 The usual file wildcards can be used.
 Here is a summary of the most often used ones:
@@ -531,16 +531,16 @@ Here is a summary of the most often used ones:
 				\texttt{?} & Match any character once \\
 				\texttt{[abc]} & Match the character a, b or c \\
 				\texttt{.} & Matches a dot \\
-				\texttt{a\{b,c\}} & Matches "ab" and "ac" \\
+				\texttt{a\{b,c\}} & Matches ``ab" and ``ac" \\
 \end{tabular} \end{center}
 
 When the pattern includes a slash (/) Vim will compare directory names.
 Without the slash only the last part of a file name is used.
-For example, "\texttt{*.txt}" matches "\texttt{/home/biep/readme.txt}".
-The pattern "\texttt{/home/biep/*}" would also match it.
-But "\texttt{home/foo/*.txt}" wouldn't.
+For example, ``\texttt{*.txt}" matches ``\texttt{/home/biep/readme.txt}".
+The pattern ``\texttt{/home/biep/*}" would also match it.
+But ``\texttt{home/foo/*.txt}" wouldn't.
 
-When including a slash, Vim matches the pattern against both the full path of the file ("\texttt{/home/biep/readme.txt}") and the relative path (e.g., "\texttt{biep/readme.txt}").
+When including a slash, Vim matches the pattern against both the full path of the file ("\texttt{/home/biep/readme.txt}") and the relative path (e.g., ``\texttt{biep/readme.txt}").
 
 \texttt{Note}: When working on a system that uses a backslash as file separator, such as MS-Windows, you still use forward slashes in autocommands.
 This makes it easier to write the pattern, since a backslash has a special meaning.
@@ -554,7 +554,7 @@ Example:
  :autocmd! FileWritePre *
 \end{Verbatim}
 
-This will delete all autocommands for the "\texttt{FileWritePre}" event that use the "\texttt{*}" pattern.
+This will delete all autocommands for the ``\texttt{FileWritePre}" event that use the ``\texttt{*}" pattern.
 \subsubsection{Listing}
 To list all the currently defined autocommands, use this:
 
@@ -570,13 +570,13 @@ For example, to list all BufNewFile autocommands:
  :autocmd BufNewFile
 \end{Verbatim}
 
-To list all autocommands for the pattern "\texttt{*.c}":
+To list all autocommands for the pattern ``\texttt{*.c}":
 
 \begin{Verbatim}[samepage=true]
  :autocmd * *.c
 \end{Verbatim}
 
-Using "\texttt{*}" for the event will list all the events.
+Using ``\texttt{*}" for the event will list all the events.
 To list all autocommands for the cprograms group:
 
 \begin{Verbatim}[samepage=true]
@@ -587,7 +587,7 @@ To list all autocommands for the cprograms group:
 The \texttt{\{group\}} item, used when defining an autocommand, groups related autocommands together.
 This can be used to delete all the autocommands in a certain group, for example.
 
-When defining several autocommands for a certain group, use the "\texttt{:augroup}" command.
+When defining several autocommands for a certain group, use the ``\texttt{:augroup}" command.
 For example, let's define autocommands for C programs:
 
 \begin{Verbatim}[samepage=true]
@@ -604,7 +604,7 @@ This will do the same as:
  :autocmd cprograms BufReadPost *.cpp   :set sw=3 sts=3
 \end{Verbatim}
 
-To delete all autocommands in the "\texttt{cprograms}" group:
+To delete all autocommands in the ``\texttt{cprograms}" group:
 
 \begin{Verbatim}[samepage=true]
  :autocmd! cprograms
@@ -613,7 +613,7 @@ To delete all autocommands in the "\texttt{cprograms}" group:
 \subsubsection{Nesting}
 Generally, commands executed as the result of an autocommand event will not trigger any new events.
 If you read a file in response to a FileChangedShell event, it will not trigger the autocommands that would set the syntax, for example.
-To make the events triggered, add the "\texttt{nested}" argument:
+To make the events triggered, add the ``\texttt{nested}" argument:
 
 \begin{Verbatim}[samepage=true]
  :autocmd FileChangedShell * nested  edit
@@ -629,22 +629,22 @@ Example:
 \end{Verbatim}
 
 This defines an autocommand that is triggered when a new file has been edited.
-The file name must end in "\texttt{.new}".
-The "\texttt{:execute}" command uses expression evaluation to form a new command and execute it.
-When editing the file "\texttt{tryout.c.new}" the executed command will be:
+The file name must end in ``\texttt{.new}".
+The ``\texttt{:execute}" command uses expression evaluation to form a new command and execute it.
+When editing the file ``\texttt{tryout.c.new}" the executed command will be:
 
 \begin{Verbatim}[samepage=true]
  :doautocmd BufReadPost tryout.c
 \end{Verbatim}
 
-The \texttt{expand()} function takes the "\texttt{<afile>}" argument, which stands for the file name the autocommand was executed for, and takes the root of the file name with "\texttt{:r}".
+The \texttt{expand()} function takes the ``\texttt{<afile>}" argument, which stands for the file name the autocommand was executed for, and takes the root of the file name with ``\texttt{:r}".
 
-"\texttt{:doautocmd}" executes on the current buffer.
-The "\texttt{:doautoall}" command works like "\texttt{doautocmd}" except it executes on all the buffers.
+``\texttt{:doautocmd}" executes on the current buffer.
+The ``\texttt{:doautoall}" command works like ``\texttt{doautocmd}" except it executes on all the buffers.
 
 \subsubsection{Using normal mode commands}
 The commands executed by an autocommand are Command-line commands.
-If you want to use a Normal mode command, the "\texttt{:normal}" command can be used.
+If you want to use a Normal mode command, the ``\texttt{:normal}" command can be used.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -653,14 +653,14 @@ Example:
 
 This will make the cursor jump to the last line of *.log files when you start to edit it.
 
-Using the "\texttt{:normal}" command is a bit tricky.
+Using the ``\texttt{:normal}" command is a bit tricky.
 First of all, make sure its argument is a complete command, including all the arguments.
-When you use "\texttt{i}" to go to Insert mode, there must also be a <Esc> to leave Insert mode again.
-If you use a "\texttt{/}" to start a search pattern, there must be a <CR> to execute it.
+When you use ``\texttt{i}" to go to Insert mode, there must also be a <Esc> to leave Insert mode again.
+If you use a ``\texttt{/}" to start a search pattern, there must be a <CR> to execute it.
 
-The "\texttt{:normal}" command uses all the text after it as commands.
+The ``\texttt{:normal}" command uses all the text after it as commands.
 Thus there can be no \texttt{|} and another command following.
-To work around this, put the "\texttt{:normal}" command inside an "\texttt{:execute}" command.
+To work around this, put the ``\texttt{:normal}" command inside an ``\texttt{:execute}" command.
 This also makes it possible to pass unprintable characters in a convenient way.
 Example:
 
