--- a/src/usr_43.tex
+++ b/src/usr_43.tex
@@ -17,8 +17,8 @@ You do this with only two steps:
 \label{your-runtime-dir}
 \begin{enumerate}
 				\item Create your own runtime directory.
-								On Unix this usually is "\texttt{~/.vim}".
-								In this directory create the "\texttt{ftplugin}" directory:
+								On Unix this usually is ``\texttt{~/.vim}".
+								In this directory create the ``\texttt{ftplugin}" directory:
 
 								\begin{Verbatim}[samepage=true]
 	mkdir ~/.vim
@@ -26,7 +26,7 @@ You do this with only two steps:
 								\end{Verbatim}
 
 
-								When you are not on Unix, check the value of the \texttt{'runtimepath'} option to see where Vim will look for the "\texttt{ftplugin}" directory:
+								When you are not on Unix, check the value of the \texttt{'runtimepath'} option to see where Vim will look for the ``\texttt{ftplugin}" directory:
 
 								\begin{Verbatim}[samepage=true]
  set runtimepath
@@ -36,7 +36,7 @@ You do this with only two steps:
 
 								You might want to prepend a directory name to the \texttt{'runtimepath'} option in your |\texttt{:h vimrc}| file if you don't like the default value.
 
-				\item Create the file "\texttt{~/.vim/ftplugin/c.vim}", with the contents:
+				\item Create the file ``\texttt{~/.vim/ftplugin/c.vim}", with the contents:
 								\begin{Verbatim}[samepage=true]
 	setlocal softtabstop=4
 	noremap <buffer> <LocalLeader>c o/**************<CR><CR>/<Esc>
@@ -46,15 +46,15 @@ You do this with only two steps:
 Try editing a C file.
 You should notice that the \texttt{'softtabstop'} option is set to 4.
 But when you edit another file it's reset to the default zero.
-That is because the "\texttt{:setlocal}" command was used.
+That is because the ``\texttt{:setlocal}" command was used.
 This sets the \texttt{'softtabstop'} option only locally to the buffer.
 As soon as you edit another buffer, it will be set to the value set for that buffer.
-For a new buffer it will get the default value or the value from the last "\texttt{:set}" command.
+For a new buffer it will get the default value or the value from the last ``\texttt{:set}" command.
 
-Likewise, the mapping for "\texttt{\textbackslash{}c}" will disappear when editing another buffer.
-The "\texttt{:map <buffer>}" command creates a mapping that is local to the current buffer.
-This works with any mapping command: "\texttt{:map!}", "\texttt{:vmap}", etc.
-The |\texttt{:h <LocalLeader>}| in the mapping is replaced with the value of the "\texttt{maplocalleader}" variable.
+Likewise, the mapping for ``\texttt{\textbackslash{}c}" will disappear when editing another buffer.
+The ``\texttt{:map <buffer>}" command creates a mapping that is local to the current buffer.
+This works with any mapping command: ``\texttt{:map!}", ``\texttt{:vmap}", etc.
+The |\texttt{:h <LocalLeader>}| in the mapping is replaced with the value of the ``\texttt{maplocalleader}" variable.
 
 You can find examples for filetype plugins in this directory:
 
@@ -69,7 +69,7 @@ If you are using a type of file that is not recognized by Vim, this is how to ge
 You need a runtime directory of your own.
 See \hyperref[your-runtime-dir]{|\texttt{your-runtime-dir}|} above.
 
-Create a file "\texttt{filetype.vim}" which contains an autocommand for your filetype.
+Create a file ``\texttt{filetype.vim}" which contains an autocommand for your filetype.
 (Autocommands were explained in section |\hyperref[Autocommands]{\texttt{Autocommands}}|.)
 Example:
 
@@ -79,16 +79,16 @@ Example:
  augroup END
 \end{Verbatim}
 
-This will recognize all files that end in "\texttt{.xyz}" as the "\texttt{xyz"} filetype.
-The "\texttt{:augroup}" commands put this autocommand in the "\texttt{filetypedetect}" group.
-This allows removing all autocommands for filetype detection when doing "\texttt{:filetype off}".
-The "\texttt{setf}" command will set the \texttt{'filetype'} option to its argument, unless it was set already.
+This will recognize all files that end in ``\texttt{.xyz}" as the ``\texttt{xyz"} filetype.
+The ``\texttt{:augroup}" commands put this autocommand in the ``\texttt{filetypedetect}" group.
+This allows removing all autocommands for filetype detection when doing ``\texttt{:filetype off}".
+The ``\texttt{setf}" command will set the \texttt{'filetype'} option to its argument, unless it was set already.
 This will make sure that \texttt{'filetype'} isn't set twice.
 
 You can use many different patterns to match the name of your file.
 Directory names can also be included.
 See |\texttt{:h autocmd-patterns}|.
-For example, the files under "\texttt{/usr/share/scripts/}" are all "\texttt{ruby}" files, but don't have the expected file name extension.
+For example, the files under ``\texttt{/usr/share/scripts/}" are all ``\texttt{ruby}" files, but don't have the expected file name extension.
 Adding this to the example above:
 
 \begin{Verbatim}[samepage=true]
@@ -99,10 +99,10 @@ Adding this to the example above:
 \end{Verbatim}
 
 However, if you now edit a file /usr/share/scripts/README.txt, this is not a
-ruby file.  The danger of a pattern ending in "\texttt{*}" is that it quickly matches
+ruby file.  The danger of a pattern ending in ``\texttt{*}" is that it quickly matches
 too many files.  To avoid trouble with this, put the filetype.vim file in
 another directory, one that is at the end of \texttt{'runtimepath'}.  For Unix for
-example, you could use "\texttt{~/.vim/after/filetype.vim}".
+example, you could use ``\texttt{~/.vim/after/filetype.vim}".
 
 You now put the detection of text files in ~/.vim/filetype.vim:
 
@@ -121,19 +121,19 @@ Then use this in \texttt{~/.vim/after/filetype.vim}, which is found last:
  augroup END
 \end{Verbatim}
 
-What will happen now is that Vim searches for "\texttt{filetype.vim}" files in each directory in \texttt{'runtimepath'}.
+What will happen now is that Vim searches for ``\texttt{filetype.vim}" files in each directory in \texttt{'runtimepath'}.
 First \texttt{~/.vim/filetype.vim} is found.
 The autocommand to catch \texttt{*.txt} files is defined there.
 Then Vim finds the filetype.vim file in \texttt{\$VIMRUNTIME}, which is halfway \texttt{'runtimepath'}.
 Finally \texttt{/.vim/after/filetype.vim} is found and the autocommand for detecting ruby files in \texttt{/usr/share/scripts} is added.
 
 When you now edit \texttt{/usr/share/scripts/README.txt}, the autocommands are checked in the order in which they were defined.
-The \texttt{*.txt} pattern matches, thus "\texttt{setf text}" is executed to set the filetype to "\texttt{text}".
-The pattern for ruby matches too, and the "\texttt{setf ruby}" is executed.
-But since \texttt{'filetype'} was already set to "\texttt{text}", nothing happens here.
+The \texttt{*.txt} pattern matches, thus ``\texttt{setf text}" is executed to set the filetype to ``\texttt{text}".
+The pattern for ruby matches too, and the ``\texttt{setf ruby}" is executed.
+But since \texttt{'filetype'} was already set to ``\texttt{text}", nothing happens here.
 
 When you edit the file \texttt{/usr/share/scripts/foobar} the same autocommands are checked.
-Only the one for ruby matches and "\texttt{setf ruby}" sets \texttt{'filetype'} to ruby.
+Only the one for ruby matches and ``\texttt{setf ruby}" sets \texttt{'filetype'} to ruby.
 
 \subsubsection{Recognizing by contents}
 If your file cannot be recognized by its file name, you might be able to recognize it by its contents.
@@ -143,7 +143,7 @@ For example, many script files start with a line like:
     #!/bin/xyz 
 \end{Verbatim}
 
-To recognize this script create a file "\texttt{scripts.vim}" in your runtime directory (same place where filetype.vim goes).
+To recognize this script create a file ``\texttt{scripts.vim}" in your runtime directory (same place where filetype.vim goes).
 It might look like this:
 
 \begin{Verbatim}[samepage=true]
@@ -156,7 +156,7 @@ It might look like this:
 \end{Verbatim}
 
 The first check with \texttt{did\_filetype()} is to avoid that you will check the contents of files for which the filetype was already detected by the file name.
-That avoids wasting time on checking the file when the "\texttt{setf}" command won't do anything.
+That avoids wasting time on checking the file when the ``\texttt{setf}" command won't do anything.
 
 The scripts.vim file is sourced by an autocommand in the default \texttt{filetype.vim} file.
 Therefore, the order of checks is:
