--- a/src/usr_90.tex
+++ b/src/usr_90.tex
@@ -12,12 +12,12 @@ This chapter gives a few hints and also explains how upgrading to a new version 
 First you have to decide if you are going to install Vim system-wide or for a single user.
 The installation is almost the same, but the directory where Vim is installed in differs.
 
-For a system-wide installation the base directory "\texttt{/usr/local}" is often used.
+For a system-wide installation the base directory ``\texttt{/usr/local}" is often used.
 But this may be different for your system.
 Try finding out where other packages are installed.
 
 When installing for a single user, you can use your home directory as the base.
-The files will be placed in subdirectories like "\texttt{bin}" and "\texttt{shared/vim}".
+The files will be placed in subdirectories like ``\texttt{bin}" and ``\texttt{shared/vim}".
 
 \subsubsection{From a package}
 You can get precompiled binaries for many different UNIX systems.
@@ -28,7 +28,7 @@ It is a good idea to compile your own UNIX version from the source.
 Also, creating the editor from the source allows you to control which features are compiled.
 This does require a compiler though.
 
-If you have a Linux distribution, the "\texttt{vi}" program is probably a minimal version of Vim.
+If you have a Linux distribution, the ``\texttt{vi}" program is probably a minimal version of Vim.
 It doesn't do syntax highlighting, for example.
 Try finding another Vim package in your distribution, or search on the web site.
 
@@ -46,7 +46,7 @@ To get the Vim archives, look in this file for a mirror near you, this should pr
     \url{ftp://ftp.vim.org/pub/vim/MIRRORS} 
 
 Or use the home site ftp.vim.org, if you think it's fast enough.
-Go to the "\texttt{unix}" directory and you'll find a list of files there.
+Go to the ``\texttt{unix}" directory and you'll find a list of files there.
 The version number is embedded in the file name.
 You will want to get the most recent version.
 
@@ -83,7 +83,7 @@ If you have the one big archive, you unpack it like this:
  bzip2 -d -c path/vim-6.1.tar.bz2 | tar xf -
 \end{Verbatim}
 
-Change "\texttt{path}" to where you have downloaded the file.
+Change ``\texttt{path}" to where you have downloaded the file.
 
 \begin{Verbatim}[samepage=true]
  gzip -d -c path/vim-6.1-src1.tar.gz | tar xf -
@@ -124,7 +124,7 @@ If it is alright you will finally see:
     ALL DONE 
 \end{Verbatim}
 
-If you get "\texttt{TEST FAILURE}" some test failed.
+If you get ``\texttt{TEST FAILURE}" some test failed.
 If there are one or two messages about failed tests, Vim might still work, but not perfectly.
 If you see a lot of error messages or Vim doesn't finish until the end, there must be something wrong.
 Either try to find out yourself, or find someone who can solve it.
@@ -166,7 +166,7 @@ If this doesn't work, use this command to check where Vim is looking for the run
  :echo $VIMRUNTIME
 \end{Verbatim}
 
-You can also start Vim with the "\texttt{-V}" argument to see what happens during startup:
+You can also start Vim with the ``\texttt{-V}" argument to see what happens during startup:
 
 \begin{Verbatim}[samepage=true]
  vim -V
@@ -181,7 +181,7 @@ One of the simple ways is to edit the Makefile.
 There are many directions and examples.
 Often you can enable or disable a feature by uncommenting a line.
 
-An alternative is to run "\texttt{configure}" separately.
+An alternative is to run ``\texttt{configure}" separately.
 This allows you to specify configuration options manually.
 The disadvantage is that you have to figure out what exactly to type.
 
@@ -207,7 +207,7 @@ To see the whole list use:
 
 You can find a bit of explanation for each feature, and links for more information here: |\texttt{:h feature-list}|.
 
-For the adventurous, edit the file "\texttt{feature.h}".
+For the adventurous, edit the file ``\texttt{feature.h}".
 You can also change the source code yourself!
 \subsection{MS-Windows}
 There are two ways to install the Vim program for Microsoft Windows.
@@ -228,10 +228,10 @@ To get the Vim archives, look in this file for a mirror near you, this should pr
 \end{Verbatim}
 
 Or use the home site ftp.vim.org, if you think it's fast enough.
-Go to the "\texttt{pc}" directory and you'll find a list of files there.
+Go to the ``\texttt{pc}" directory and you'll find a list of files there.
 The version number is embedded in the file name.
 You will want to get the most recent version.
-We will use "\texttt{61}" here, which is version 6.1.
+We will use ``\texttt{61}" here, which is version 6.1.
 
 \begin{Verbatim}[samepage=true]
     gvim61.exe      The self-installing archive.
@@ -260,7 +260,7 @@ You always need to get the archive with runtime files.
 \end{Verbatim}
 
 Use your un-zip program to unpack the files.
-For example, using the "\texttt{unzip}" program:
+For example, using the ``\texttt{unzip}" program:
 
 \begin{Verbatim}[samepage=true]
  cd c:\
@@ -268,17 +268,17 @@ For example, using the "\texttt{unzip}" program:
  unzip path\vim61rt.zip
 \end{Verbatim}
 
-This will unpack the files in the directory "\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
-If you already have a "\texttt{vim}" directory somewhere, you will want to move to the directory just above it.
+This will unpack the files in the directory ``\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
+If you already have a ``\texttt{vim}" directory somewhere, you will want to move to the directory just above it.
 
-Now change to the "\texttt{vim\textbackslash{}vim61}" directory and run the install program:
+Now change to the ``\texttt{vim\textbackslash{}vim61}" directory and run the install program:
 
 \begin{Verbatim}[samepage=true]
  install
 \end{Verbatim}
 
 Carefully look through the messages and select the options you want to use.
-If you finally select "\texttt{do it}" the install program will carry out the actions you selected.
+If you finally select ``\texttt{do it}" the install program will carry out the actions you selected.
 
 The install program doesn't move the runtime files.
 They remain where you unpacked them.
@@ -292,12 +292,12 @@ Check the file src/INSTALLpc.txt for hints.
 \subsection{Upgrading}
 If you are running one version of Vim and want to install another, here is what to do.
 \subsubsection{Unix}
-When you type "\texttt{make install}" the runtime files will be copied to a directory which is specific for this version.
+When you type ``\texttt{make install}" the runtime files will be copied to a directory which is specific for this version.
 Thus they will not overwrite a previous version.
 This makes it possible to use two or more versions next to each other.
 
-The executable "\texttt{vim}" will overwrite an older version.
-If you don't care about keeping the old version, running "\texttt{make install}" will work fine.
+The executable ``\texttt{vim}" will overwrite an older version.
+If you don't care about keeping the old version, running ``\texttt{make install}" will work fine.
 You can delete the old runtime files manually.
 Just delete the directory with the version number in it and all files below it.
 Example:
@@ -307,7 +307,7 @@ Example:
 \end{Verbatim}
 
 There are normally no changed files below this directory.
-If you did change the "\texttt{filetype.vim}" file, for example, you better merge the changes into the new version before deleting it.
+If you did change the ``\texttt{filetype.vim}" file, for example, you better merge the changes into the new version before deleting it.
 
 If you are careful and want to try out the new version for a while before switching to it, install the new version under another name.
 You need to specify a configure argument.
@@ -317,9 +317,9 @@ For example:
  ./configure --with-vim-name=vim6
 \end{Verbatim}
 
-Before running "\texttt{make install}", you could use "\texttt{make -n install}" to check that no valuable existing files are overwritten.
+Before running ``\texttt{make install}", you could use ``\texttt{make -n install}" to check that no valuable existing files are overwritten.
 
-When you finally decide to switch to the new version, all you need to do is to rename the binary to "\texttt{vim}".
+When you finally decide to switch to the new version, all you need to do is to rename the binary to ``\texttt{vim}".
 For example:
 
 \begin{Verbatim}[samepage=true]
@@ -329,7 +329,7 @@ For example:
 \subsubsection{Ms-windows}
 Upgrading is mostly equal to installing a new version.
 Just unpack the files in the same place as the previous version.
-A new directory will be created, e.g., "\texttt{vim61}", for the files of the new version.
+A new directory will be created, e.g., ``\texttt{vim61}", for the files of the new version.
 Your runtime files, vimrc file, viminfo, etc. will be left alone.
 
 If you want to run the new version next to the old one, you will have to do some handwork.
@@ -388,7 +388,7 @@ Look here for alternate solutions: |\texttt{:h :fixdel}|.
 \textit{Q: I Am Using RedHat Linux.  Can I Use the Vim That Comes with the System?}
 
 By default RedHat installs a minimal version of Vim.
-Check your RPM packages for something named "\texttt{Vim-enhanced-version.rpm}" and install that.
+Check your RPM packages for something named ``\texttt{Vim-enhanced-version.rpm}" and install that.
 
 \textit{Q: How Do I Turn Syntax Coloring On?  How do I make plugins work?}
 
@@ -422,7 +422,7 @@ If you installed Vim from sources you can use this command:
 \end{Verbatim}
 
 However, if you have deleted the original files or you used an archive that someone supplied, you can't do this.
-Do delete the files manually, here is an example for when "\texttt{/usr/local}" was used as the root:
+Do delete the files manually, here is an example for when ``\texttt{/usr/local}" was used as the root:
 
 \begin{Verbatim}[samepage=true]
  rm -rf /usr/local/share/vim/vim61
@@ -461,23 +461,23 @@ Do delete the files manually, here is an example for when "\texttt{/usr/local}" 
 \end{Verbatim}
 
 \subsubsection{Ms-windows}
-If you installed Vim with the self-installing archive you can run the "\texttt{uninstall-gui}" program located in the same directory as the other Vim programs, e.g. "\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
+If you installed Vim with the self-installing archive you can run the ``\texttt{uninstall-gui}" program located in the same directory as the other Vim programs, e.g. ``\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
 You can also launch it from the Start menu if installed the Vim entries there.
 This will remove most of the files, menu entries and desktop shortcuts.
 Some files may remain however, as they need a Windows restart before being deleted.
 
-You will be given the option to remove the whole "\texttt{vim}" directory.
+You will be given the option to remove the whole ``\texttt{vim}" directory.
 It probably contains your vimrc file and other runtime files that you created, so be careful.
 
-Else, if you installed Vim with the zip archives, the preferred way is to use the "\texttt{uninstal}" program (note the missing l at the end).
-You can find it in the same directory as the "\texttt{install}" program, e.g., "\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
-This should also work from the usual "install/remove software" page.
+Else, if you installed Vim with the zip archives, the preferred way is to use the ``\texttt{uninstal}" program (note the missing l at the end).
+You can find it in the same directory as the ``\texttt{install}" program, e.g., ``\texttt{c:\textbackslash{}vim\textbackslash{}vim61}".
+This should also work from the usual ``install/remove software" page.
 
 However, this only removes the registry entries for Vim.
 You have to delete the files yourself.
-Simply select the directory "\texttt{vim\textbackslash{}vim61}" and delete it recursively.
+Simply select the directory ``\texttt{vim\textbackslash{}vim61}" and delete it recursively.
 There should be no files there that you changed, but you might want to check that first.
 
-The "\texttt{vim}" directory probably contains your vimrc file and other runtime files that you created.
+The ``\texttt{vim}" directory probably contains your vimrc file and other runtime files that you created.
 You might want to keep that.
 \clearpage
